string in prefs: more consistent naming
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9047 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -1101,9 +1101,9 @@ exception.error=خطأ %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=التفضيلات
-foxtrick.prefs.preferences=تفضيلات FoxTrick
+prefs.title=تفضيلات FoxTrick
 foxtrick.log.header=سجل FoxTrick
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -1112,7 +1112,7 @@ status.active=مفعل
 status.enabled=يعمل ولكن غير مفعل في %s
 status.disabled=معطل
 
-prefs.screenshot=صورة من الشاشة
+module.screenshot=صورة من الشاشة
 
 # tabs in preferences page
 #tabs
@@ -1130,35 +1130,35 @@ tab.about=حول
 tab.changes=التغييرات
 tab.help=مساعدة
 
-foxtrick.prefs.setup=الإعداد
-foxtrick.prefs.setup.desc=هذه هي إعداداتك التي حصل عليها FoxTrick. إذا كانت غير صحيح نرجو أن تقوم بالإبلاغ عنها.
-foxtrick.prefs.setup.locale=اللغة
-foxtrick.prefs.setup.dateFormat=صيغة التاريخ
-foxtrick.prefs.setup.country=البلد
+prefs.setup=الإعداد
+prefs.setup.desc=هذه هي إعداداتك التي حصل عليها FoxTrick. إذا كانت غير صحيح نرجو أن تقوم بالإبلاغ عنها.
+prefs.setup.locale=اللغة
+prefs.setup.dateFormat=صيغة التاريخ
+prefs.setup.country=البلد
 
-foxtrick.prefs.captionCleanupBranch=التفضيلات المخزنة
-foxtrick.prefs.captionLoadSavePrefs=استيراد أو تصدير التفضيلات
-foxtrick.prefs.labelCleanupBranch=إعادة تعيين التفضيلات الإفتراضية
-foxtrick.prefs.oauth.delete=إزالة التخويل من الفريق المختار.
+prefs.storedData.title=التفضيلات المخزنة
+prefs.loadSave.title=استيراد أو تصدير التفضيلات
+prefs.storedData.restoreDefault=إعادة تعيين التفضيلات الإفتراضية
+prefs.storedData.oauth.delete=إزالة التخويل من الفريق المختار.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=ينطبق على هذا المستعرض فقط. لإزالة ترخيص البرنامج في الفريق الرجاء إستخدام صفحة هاتريك في {إدارة CHPP}
-foxtrick.prefs.labelDisableAll=تعطيل كل الوحدات
-foxtrick.prefs.labelRevokePermissions=إلغاء كل التصاريح الإختيارية (مستعرض Chrome فقط)
-foxtrick.prefs.labelSavePrefs=تصدير التفضيلات أو الإعدادات الشخصية
-foxtrick.prefs.labelSavePrefs_Prefs=التفضيلات
-foxtrick.prefs.labelSavePrefs_Notes=الإعدادت الشخصية (القوالب والروابط المخصصة ومصفيات الإنتقالات)
-foxtrick.prefs.labelSavePrefs_Token=رمز OAuth
-foxtrick.prefs.saveNotice=نسخ المحتويات في خانة النص ثم الحفظ كملف حتى تتمكن من استيراد التفضيلات في المستقبل.
-foxtrick.prefs.labelLoadPrefs=استيراد التفضيلات (سوف يتم إلغاء التفضيلات الحالية)
-foxtrick.prefs.loadNotice=قم بنسخ تفضيلاتك المخزنة في صندوق النص ثم اضغط على (استيراد) لاستيراد تفضيلاتك.
-foxtrick.prefs.captionDisableSettings=تعطيل FoxTrick
-foxtrick.prefs.stagepref=تعطيل في سيرفر Stage
-foxtrick.prefs.disableTemporaryLabel=تعطيل مؤقت
-foxtrick.prefs.saved=تم حفظ التفضيلات\!
-foxtrick.prefs.loaded=تم تحميل التفضيلات\!
-foxtrick.prefs.dismissNotice=(انقر لإخفاء هذه الرسالة)
+prefs.storedData.oauth.delete.desc=ينطبق على هذا المستعرض فقط. لإزالة ترخيص البرنامج في الفريق الرجاء إستخدام صفحة هاتريك في {إدارة CHPP}
+prefs.storedData.disableAll=تعطيل كل الوحدات
+prefs.storedData.revokePermissions=إلغاء كل التصاريح الإختيارية (مستعرض Chrome فقط)
+prefs.loadSave.export=تصدير التفضيلات أو الإعدادات الشخصية
+prefs.loadSave.export.prefs=التفضيلات
+prefs.loadSave.export.notes=الإعدادت الشخصية (القوالب والروابط المخصصة ومصفيات الإنتقالات)
+prefs.loadSave.export.token=رمز OAuth
+prefs.loadSave.export.notice=نسخ المحتويات في خانة النص ثم الحفظ كملف حتى تتمكن من استيراد التفضيلات في المستقبل.
+prefs.loadSave.import=استيراد التفضيلات (سوف يتم إلغاء التفضيلات الحالية)
+prefs.loadSave.import.notice=قم بنسخ تفضيلاتك المخزنة في صندوق النص ثم اضغط على (استيراد) لاستيراد تفضيلاتك.
+prefs.disable.title=تعطيل FoxTrick
+prefs.disable.stage=تعطيل في سيرفر Stage
+prefs.disable.temporary=تعطيل مؤقت
+prefs.feedback.saved=تم حفظ التفضيلات\!
+prefs.feedback.loaded=تم تحميل التفضيلات\!
+prefs.feedback.dismiss=(انقر لإخفاء هذه الرسالة)
 
-pref.xmlLoad=تحميل ملفات إضافية من هاتريك
+prefs.additional.xmlLoad=تحميل ملفات إضافية من هاتريك
 
 link.title=الروابط
 link.homepage=الصفحة الرئيسية
@@ -1173,8 +1173,8 @@ link.recentChanges=التغييرات الأخيرة
 
 module.link=يمكنك نسخ ولصق هذا الرابط إلى المنتدى
 
-foxtrick.showReleaseNotes=إظهار ملاحظات الإصدارات بعد تحديث FoxTrick
-foxtrick.versionReleaseNotes=إظهار ملاحظات الإصدارات في\:
+releaseNotes.show=إظهار ملاحظات الإصدارات بعد تحديث FoxTrick
+releaseNotes.showFor=إظهار ملاحظات الإصدارات في\:
 
 about.copyright=حقوق النشر
 about.maintainers=فريق العمل
@@ -1185,15 +1185,15 @@ about.designers=المصممون
 prefs.view.by.category=عرض حسب الفئة
 prefs.view.by.page=عرض حسب آخر صفحة في هاتريك
 
-delete_foxtrick_branches_ask=هل أنت متأكد من أنك تود إعادة تعيين الإعدادت إلى الإفتراضية؟
-delete_oauth_ask=إلغاء التخويل في فريق %s?
-disable_all_foxtrick_modules_ask=هل أنت متأكد من أنك تود تعطيل كل الوحدات؟
-revoke_permissions_ask=هل أنت متأكد من أنك تود إلغاء كل التصاريح الإختيارية؟
+prefs.delete_foxtrick_branches_ask=هل أنت متأكد من أنك تود إعادة تعيين الإعدادت إلى الإفتراضية؟
+prefs.delete_oauth_ask=إلغاء التخويل في فريق %s?
+prefs.disable_all_foxtrick_modules_ask=هل أنت متأكد من أنك تود تعطيل كل الوحدات؟
+prefs.revoke_permissions_ask=هل أنت متأكد من أنك تود إلغاء كل التصاريح الإختيارية؟
 
-foxtrick.prefs.AdditionalOptions=خيارات إضافية
-foxtrick.prefs.smallcopyicons=إظهار أزرار النسخ في العنوان بدلا من القضيب
-foxtrick.prefs.DisplayHTMLDebugOutput=إظهار سجل البرنامج في أسفل الصفحة
+prefs.additional.title=خيارات إضافية
+prefs.additional.smallCopyIcons=إظهار أزرار النسخ في العنوان بدلا من القضيب
+prefs.additional.HTMLDebugLog=إظهار سجل البرنامج في أسفل الصفحة
 
-foxtrick.prefs.permissionsHint=%s يحتاج إلى تخويل للعمل. قم بتمكينه في المربع التالي. إذا رفضت عملية التمكين فإن هذه الخاصية سيتم تعطيلها.
+prefs.permissionsHint=%s يحتاج إلى تخويل للعمل. قم بتمكينه في المربع التالي. إذا رفضت عملية التمكين فإن هذه الخاصية سيتم تعطيلها.
 
 ###EOF
