--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -587,23 +587,23 @@ tab.about=Інфа
 tab.changes=Зьмены
 tab.help=Дапамога
 
-foxtrick.prefs.setup.locale=Мова
-foxtrick.prefs.setup.dateFormat=Фармат даты
-foxtrick.prefs.setup.country=Краіна
+prefs.setup.locale=Мова
+prefs.setup.dateFormat=Фармат даты
+prefs.setup.country=Краіна
 
-foxtrick.prefs.captionCleanupBranch=Захаваныя налады
-foxtrick.prefs.captionLoadSavePrefs=Экспарт/імпарт наладаў
-foxtrick.prefs.labelCleanupBranch=Аднавіць налады FoxTrick па-змаўчаньні (толькі налады, без уласных наладаў. Патрабуе перазапуск)
+prefs.storedData.title=Захаваныя налады
+prefs.loadSave.title=Экспарт/імпарт наладаў
+prefs.storedData.restoreDefault=Аднавіць налады FoxTrick па-змаўчаньні (толькі налады, без уласных наладаў. Патрабуе перазапуск)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Адключыць усе модулі FoxTrick
-foxtrick.prefs.labelSavePrefs=Экспартаваць налады FoxTrick і ўласныя налады
-foxtrick.prefs.labelSavePrefs_Prefs=Налады
-foxtrick.prefs.labelSavePrefs_Notes=Экспартаваць налады (зацемкі, шаблоны & уласныя спасылкі)
-foxtrick.prefs.labelLoadPrefs=Імпартаваць налады FoxTrick (Бягучыя налады могуць зьмяніцца. Патрабуе перазапуск)
-foxtrick.prefs.captionDisableSettings=Адключыць FoxTrick
-foxtrick.prefs.stagepref=Адключаць FoxTrick на сэрверах Stage
-foxtrick.prefs.disableTemporaryLabel=Часова адключыць FoxTrick
-foxtrick.prefs.saved=Налады захаваныя\!
+prefs.storedData.disableAll=Адключыць усе модулі FoxTrick
+prefs.loadSave.export=Экспартаваць налады FoxTrick і ўласныя налады
+prefs.loadSave.export.prefs=Налады
+prefs.loadSave.export.notes=Экспартаваць налады (зацемкі, шаблоны & уласныя спасылкі)
+prefs.loadSave.import=Імпартаваць налады FoxTrick (Бягучыя налады могуць зьмяніцца. Патрабуе перазапуск)
+prefs.disable.title=Адключыць FoxTrick
+prefs.disable.stage=Адключаць FoxTrick на сэрверах Stage
+prefs.disable.temporary=Часова адключыць FoxTrick
+prefs.feedback.saved=Налады захаваныя\!
 
 
 
@@ -614,11 +614,11 @@ about.translators=Перакладчыкі
 about.designers=Дызайнеры
 
 
-delete_foxtrick_branches_ask=Ці вы ўпэўнены што жадаеце аднавіць налады па-змаўчаньні?\nFirefox павінен быць перазапушчаны, каб зьмены адбыліся\!
+prefs.delete_foxtrick_branches_ask=Ці вы ўпэўнены што жадаеце аднавіць налады па-змаўчаньні?\nFirefox павінен быць перазапушчаны, каб зьмены адбыліся\!
 
-foxtrick.prefs.AdditionalOptions=Дадатковыя опцыі
-foxtrick.prefs.smallcopyicons=Малыя значкі капіяваньня ў загалоўках замест асобных меню
-foxtrick.prefs.DisplayHTMLDebugOutput=Паказваць дадатковыя паведамленьнеі(debug) на старонках Hattrick’у (для распрацоўшчыкаў)
+prefs.additional.title=Дадатковыя опцыі
+prefs.additional.smallCopyIcons=Малыя значкі капіяваньня ў загалоўках замест асобных меню
+prefs.additional.HTMLDebugLog=Паказваць дадатковыя паведамленьнеі(debug) на старонках Hattrick’у (для распрацоўшчыкаў)
 
 
 ###EOF
