--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1108,9 +1108,9 @@ exception.error=Fehler %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Einstellungen
-foxtrick.prefs.preferences=FoxTrick-Einstellungen
+prefs.title=FoxTrick-Einstellungen
 foxtrick.log.header=FoxTrick Log
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -1119,7 +1119,7 @@ status.active=aktiv
 status.enabled=eingeschaltet aber nicht auf %s
 status.disabled=abgeschaltet
 
-prefs.screenshot=Screenshot
+module.screenshot=Screenshot
 
 # tabs in preferences page
 #tabs
@@ -1137,36 +1137,35 @@ tab.about=Über
 tab.changes=Änderungen
 tab.help=Hilfe
 
-foxtrick.prefs.setup=Einstellungen
-foxtrick.prefs.setup.desc=Dies sind die Einstellungen die FoxTrick bestimmt hat. Fehler {bitte melden}.
-foxtrick.prefs.setup.locale=Spracheinstellungen
-foxtrick.prefs.setup.dateFormat=Datumsformat
-foxtrick.prefs.setup.country=Ländereinstellung
+prefs.setup=Einstellungen
+prefs.setup.desc=Dies sind die Einstellungen die FoxTrick bestimmt hat. Fehler {bitte melden}.
+prefs.setup.locale=Spracheinstellungen
+prefs.setup.dateFormat=Datumsformat
+prefs.setup.country=Ländereinstellung
 
-foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
-foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
-foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
-foxtrick.prefs.oauth.delete=OAuth Token/Secret der gewählten Vereinsid löschen.
+prefs.storedData.title=Gespeicherte Daten
+prefs.loadSave.title=Einstellungen exportieren oder laden
+prefs.storedData.restoreDefault=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
+prefs.storedData.oauth.delete=OAuth Token/Secret der gewählten Vereinsid löschen.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Wirkt sich nur auf diesen Browser aus. Um FoxTrick den kompletten Zugriff zu entziehen benutzen sie bitte Hattricks eigenes {CHPP management}.
-foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
-foxtrick.prefs.labelRevokePermissions=Alle optionalen Berechtigungen enziehen (nur für Google Chrome)
-foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
-foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
-foxtrick.prefs.labelSavePrefs_Notes=Exportiere persönliche Daten (Notizen, Vorlagen & eigene Links)
-foxtrick.prefs.labelSavePrefs_Token=OAuth token und OAuth secret
-foxtrick.prefs.saveNotice=Kopiere den Inhalt des Textfeldes in eine Datei. Auf die Art kannst du später die Daten wieder importieren.
-foxtrick.prefs.labelLoadPrefs=FoxTrick-Einstellungen importieren (Aktuelle Einstellungen können überschrieben werden. Neustart erforderlich)
-foxtrick.prefs.loadNotice=Kopiere deine gespeicherten Einstellungen in das Textfeld und drücke "Importieren" um deine Einstellungen zu importieren.
-foxtrick.prefs.captionDisableSettings=FoxTrick deaktivieren
-foxtrick.prefs.stagepref=FoxTrick auf Stage Server deaktivieren
-foxtrick.prefs.disableTemporaryLabel=FoxTrick vorübergehend deaktivieren
-foxtrick.prefs.featureHighlight=Foxtrick-Elemente farblich hervorheben
-foxtrick.prefs.saved=Einstellungen gespeichert\!
-foxtrick.prefs.loaded=Einstellungen geladen\!
-foxtrick.prefs.dismissNotice=(Klicke um diese Notiz zu verbergen)
+prefs.storedData.oauth.delete.desc=Wirkt sich nur auf diesen Browser aus. Um FoxTrick den kompletten Zugriff zu entziehen benutzen sie bitte Hattricks eigenes {CHPP management}.
+prefs.storedData.disableAll=Deaktivieren aller FoxTrick Module
+prefs.storedData.revokePermissions=Alle optionalen Berechtigungen enziehen (nur für Google Chrome)
+prefs.loadSave.export=Foxtrickeinstellungen exportieren
+prefs.loadSave.export.prefs=Exportiere FoxTrick-Einstellungen
+prefs.loadSave.export.notes=Exportiere persönliche Daten (Notizen, Vorlagen & eigene Links)
+prefs.loadSave.export.token=OAuth token und OAuth secret
+prefs.loadSave.export.notice=Kopiere den Inhalt des Textfeldes in eine Datei. Auf die Art kannst du später die Daten wieder importieren.
+prefs.loadSave.import=FoxTrick-Einstellungen importieren (Aktuelle Einstellungen können überschrieben werden. Neustart erforderlich)
+prefs.loadSave.import.notice=Kopiere deine gespeicherten Einstellungen in das Textfeld und drücke "Importieren" um deine Einstellungen zu importieren.
+prefs.disable.title=FoxTrick deaktivieren
+prefs.disable.stage=FoxTrick auf Stage Server deaktivieren
+prefs.disable.temporary=FoxTrick vorübergehend deaktivieren
+prefs.additional.featureHighlight=Foxtrick-Elemente farblich hervorheben
+prefs.feedback.saved=Einstellungen gespeichert\!
+prefs.feedback.loaded=Einstellungen geladen\!
+prefs.feedback.dismiss=(Klicke um diese Notiz zu verbergen)
 
-pref.xmlLoad=Lade XMLs für Zusatzinformationen von Hattrick
 
 link.title=Links
 link.homepage=Homepage
@@ -1181,9 +1180,9 @@ link.recentChanges=Letzte Änderungen
 
 module.link=Du kannst diesen Link kopieren und im Forum einfügen um hierher zu verlinken
 
-foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
-foxtrick.versionReleaseNotes=Anzeige der Release Notes für\:
-foxtrick.Version=Version\:
+releaseNotes.show=Anzeige der Release Notes nach einem FoxTrick-Update
+releaseNotes.showFor=Anzeige der Release Notes für\:
+releaseNotes.version=Version\:
 
 about.copyright=Copyright
 about.maintainers=Projektmanagement
@@ -1194,16 +1193,17 @@ about.designers=Designer
 prefs.view.by.category=Nach Kategorie
 prefs.view.by.page=Nach letzter HT-Seite
 
-delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?
-delete_oauth_ask=OAuth Token/Secret der Vereinsid %s löschen? 
-disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
-revoke_permissions_ask=Bist Du sicher, dass Du alle optionalen Berechtigungen widerrufen willst?
+prefs.delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?
+prefs.delete_oauth_ask=OAuth Token/Secret der Vereinsid %s löschen? 
+prefs.disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
+prefs.revoke_permissions_ask=Bist Du sicher, dass Du alle optionalen Berechtigungen widerrufen willst?
 
-foxtrick.prefs.AdditionalOptions=Allgemeine Einstellungen
-foxtrick.prefs.smallcopyicons=Kleine Copyicons anstelle von einer extra Box
-foxtrick.prefs.anstoss2icons=Icons der Spezialisten\: Nutze Anstoss2 Icons
-foxtrick.prefs.DisplayHTMLDebugOutput=Anzeige von Debuginformationen auf der Hattrickseite (für Entwickler)
+prefs.additional.title=Allgemeine Einstellungen
+prefs.additional.xmlLoad=Lade XMLs für Zusatzinformationen von Hattrick
+prefs.additional.smallCopyIcons=Kleine Copyicons anstelle von einer extra Box
+prefs.additional.anstoss2Icons=Icons der Spezialisten\: Nutze Anstoss2 Icons
+prefs.additional.HTMLDebugLog=Anzeige von Debuginformationen auf der Hattrickseite (für Entwickler)
 
-foxtrick.prefs.permissionsHint=%s braucht spezielle Erlaubnis um zu funktionieren. Erlaub den Zugriff im folgenden Dialog.
+prefs.permissionsHint=%s braucht spezielle Erlaubnis um zu funktionieren. Erlaub den Zugriff im folgenden Dialog.
 
 ###EOF
