--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -964,9 +964,9 @@ exception.error=Σφάλμα %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Προτιμήσεις
-foxtrick.prefs.preferences=Προιμήσεις
+prefs.title=Προιμήσεις
 foxtrick.log.header=FoxTrick αρχείο καταγραφής
 # keep the following line untranslated
 
@@ -974,7 +974,7 @@ status.active=ενεργό
 status.enabled=ενεργοποιημένο, αλλά μη ενεργό στο %s
 status.disabled=απενεργοποιημένο
 
-prefs.screenshot=Στιγμιότυπο οθόνης
+module.screenshot=Στιγμιότυπο οθόνης
 
 # tabs in preferences page
 #tabs
@@ -992,35 +992,35 @@ tab.about=Σχετικά
 tab.changes=Αλλαγές
 tab.help=Βοήθεια
 
-foxtrick.prefs.setup=Επιλογές
-foxtrick.prefs.setup.desc=Αυτές είναι οι ρυθμίσεις  που εντοπίσαμε. Εάν είναι λάθος, {παρακαλώ αναφέρετε}.
-foxtrick.prefs.setup.locale=Ρυθμίσεις γλώσσας
-foxtrick.prefs.setup.dateFormat=Ρύθμιση μορφής ημερομηνίας
-foxtrick.prefs.setup.country=Ρυθμίσεις χώρας
+prefs.setup=Επιλογές
+prefs.setup.desc=Αυτές είναι οι ρυθμίσεις  που εντοπίσαμε. Εάν είναι λάθος, {παρακαλώ αναφέρετε}.
+prefs.setup.locale=Ρυθμίσεις γλώσσας
+prefs.setup.dateFormat=Ρύθμιση μορφής ημερομηνίας
+prefs.setup.country=Ρυθμίσεις χώρας
 
-foxtrick.prefs.captionCleanupBranch=Αποθηκευμένες προτιμήσεις
-foxtrick.prefs.captionLoadSavePrefs=Εισαγωγή ή Εξαγωγή προτιμήσεων
-foxtrick.prefs.labelCleanupBranch=Επαναφορά αρχικών ρυθμίσεων του Foxtrick (απαιτεί επανεκκίνηση)
-foxtrick.prefs.oauth.delete=Διαγράψτε το κωδικό OAuth μυστικό για την επιλεγμένη ομάδα.
+prefs.storedData.title=Αποθηκευμένες προτιμήσεις
+prefs.loadSave.title=Εισαγωγή ή Εξαγωγή προτιμήσεων
+prefs.storedData.restoreDefault=Επαναφορά αρχικών ρυθμίσεων του Foxtrick (απαιτεί επανεκκίνηση)
+prefs.storedData.oauth.delete=Διαγράψτε το κωδικό OAuth μυστικό για την επιλεγμένη ομάδα.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Ισχύει μόνο για αυτό το πρόγραμμα περιήγησης. Για να ανακαλεστεί εξ ολοκλήρου η πρόσβαση του FoxTrick για μια ομάδα, χρησιμοποιήστε Hattrick {CHPP διαχείρισης}.
-foxtrick.prefs.labelDisableAll=Απενεργοποιεί όλες τις επιλογές Foxtrick
-foxtrick.prefs.labelRevokePermissions=Ανάκληση όλα τα προαιρετικά δικαιώματα (μόνο σε Chrome)
-foxtrick.prefs.labelSavePrefs=Εξαγωγή προτιμήσεων του foxtrick
-foxtrick.prefs.labelSavePrefs_Prefs=Προτιμήσεις
-foxtrick.prefs.labelSavePrefs_Notes=Προσωπικές ρυθμίσεις (πρότυπα, συνδέσεις και φίλτρα μεταγραφών)
-foxtrick.prefs.labelSavePrefs_Token=OAuth διακριτικό
-foxtrick.prefs.saveNotice=Αντιγράψτε το περιεχόμενο στη ζώνη του κείμενο και αποθηκεύστε το ως αρχείο, ώστε να μπορείτε να εισάγετε τις προτιμήσεις στο μέλλον.
-foxtrick.prefs.labelLoadPrefs=Εισαγωγή προτιμήσεων του foxtrick (Οι υπάρχουσες ρυθμίσεις θα χαθούν. Απαιτείται επανεκκίνηση)
-foxtrick.prefs.loadNotice=Επικολλήστε τις αποθηκευμένες προτιμήσεις σας στην περιοχή κειμένου και πατήστε το πλήκτρο "Εισαγωγή", για να εισαγάγετε τις προτιμήσεις σας.
-foxtrick.prefs.captionDisableSettings=Απενεργοποίηση Foxtrick
-foxtrick.prefs.stagepref=Απενεργοποίηση Foxtrick στον server του stage
-foxtrick.prefs.disableTemporaryLabel=Απενεργοποίησε το Foxtrick προσωρινά
-foxtrick.prefs.saved=Οι προτιμήσεις αποθηκεύτηκαν\!
-foxtrick.prefs.loaded=Προτιμήσεις φορτώθηκαν\!
-foxtrick.prefs.dismissNotice=(Κάντε κλικ για να κλείσετε την παρούσα σημείωση)
+prefs.storedData.oauth.delete.desc=Ισχύει μόνο για αυτό το πρόγραμμα περιήγησης. Για να ανακαλεστεί εξ ολοκλήρου η πρόσβαση του FoxTrick για μια ομάδα, χρησιμοποιήστε Hattrick {CHPP διαχείρισης}.
+prefs.storedData.disableAll=Απενεργοποιεί όλες τις επιλογές Foxtrick
+prefs.storedData.revokePermissions=Ανάκληση όλα τα προαιρετικά δικαιώματα (μόνο σε Chrome)
+prefs.loadSave.export=Εξαγωγή προτιμήσεων του foxtrick
+prefs.loadSave.export.prefs=Προτιμήσεις
+prefs.loadSave.export.notes=Προσωπικές ρυθμίσεις (πρότυπα, συνδέσεις και φίλτρα μεταγραφών)
+prefs.loadSave.export.token=OAuth διακριτικό
+prefs.loadSave.export.notice=Αντιγράψτε το περιεχόμενο στη ζώνη του κείμενο και αποθηκεύστε το ως αρχείο, ώστε να μπορείτε να εισάγετε τις προτιμήσεις στο μέλλον.
+prefs.loadSave.import=Εισαγωγή προτιμήσεων του foxtrick (Οι υπάρχουσες ρυθμίσεις θα χαθούν. Απαιτείται επανεκκίνηση)
+prefs.loadSave.import.notice=Επικολλήστε τις αποθηκευμένες προτιμήσεις σας στην περιοχή κειμένου και πατήστε το πλήκτρο "Εισαγωγή", για να εισαγάγετε τις προτιμήσεις σας.
+prefs.disable.title=Απενεργοποίηση Foxtrick
+prefs.disable.stage=Απενεργοποίηση Foxtrick στον server του stage
+prefs.disable.temporary=Απενεργοποίησε το Foxtrick προσωρινά
+prefs.feedback.saved=Οι προτιμήσεις αποθηκεύτηκαν\!
+prefs.feedback.loaded=Προτιμήσεις φορτώθηκαν\!
+prefs.feedback.dismiss=(Κάντε κλικ για να κλείσετε την παρούσα σημείωση)
 
-pref.xmlLoad=Φόρτωση XMLs για επιπλέον πληροφορίες απ' το Hattrick
+prefs.additional.xmlLoad=Φόρτωση XMLs για επιπλέον πληροφορίες απ' το Hattrick
 
 link.title=Σύνδεσμοι
 link.homepage=Αρχική σελίδα
@@ -1035,8 +1035,8 @@ link.recentChanges=Πρόσφατες αλλαγές
 
 module.link=Μπορείτε να αντιγράψετε και να επικολλήσετε αυτόν το σύνδεσμο στη διάσκεψη, για την ανακατεύθυνση εδώ
 
-foxtrick.versionReleaseNotes=Εμφάνιση σημειώσεων έκδοσης για\:
-foxtrick.Version=Έκδοση\:
+releaseNotes.showFor=Εμφάνιση σημειώσεων έκδοσης για\:
+releaseNotes.version=Έκδοση\:
 
 about.copyright=Πνευματικά δικαιώματα
 about.maintainers=Συντηρητές
@@ -1047,15 +1047,15 @@ about.designers=Σχεδιαστές
 prefs.view.by.category=Προβολή ανά κατηγορία
 prefs.view.by.page=Προβολή από την τελευταία σελίδα HT
 
-delete_foxtrick_branches_ask=Θέλεις σίγουρα να επαναφέρεις τις αρχικές ρυθμίσεις?\nΟ Firefox πρέπει να επανεκκινήσει για να ισχύουν οι αλλαγές\!
-delete_oauth_ask=Διαγραφή ένδειξης OAuth για teamid % s; 
-disable_all_foxtrick_modules_ask=Σίγουρα θέλεις να απενεργοποιήσεις όλες τις επιλογές?\n
-revoke_permissions_ask=Είστε βέβαιοι ότι θέλετε να ανακαλέσει όλα τα προαιρετικά δικαιώματα;
+prefs.delete_foxtrick_branches_ask=Θέλεις σίγουρα να επαναφέρεις τις αρχικές ρυθμίσεις?\nΟ Firefox πρέπει να επανεκκινήσει για να ισχύουν οι αλλαγές\!
+prefs.delete_oauth_ask=Διαγραφή ένδειξης OAuth για teamid % s; 
+prefs.disable_all_foxtrick_modules_ask=Σίγουρα θέλεις να απενεργοποιήσεις όλες τις επιλογές?\n
+prefs.revoke_permissions_ask=Είστε βέβαιοι ότι θέλετε να ανακαλέσει όλα τα προαιρετικά δικαιώματα;
 
-foxtrick.prefs.AdditionalOptions=Γενικές επιλογές
-foxtrick.prefs.smallcopyicons=Εμφάνιση εικονιδίων αντιγραφής στην κεφαλίδα, αντί της πλευρικής εργαλειοθήκης
-foxtrick.prefs.DisplayHTMLDebugOutput=Εμφάνιση αρχείο καταγραφής του FoxTrick  στο κάτω μέρος των σελίδων (για το τον εντοπισμό σφαλμάτων)
+prefs.additional.title=Γενικές επιλογές
+prefs.additional.smallCopyIcons=Εμφάνιση εικονιδίων αντιγραφής στην κεφαλίδα, αντί της πλευρικής εργαλειοθήκης
+prefs.additional.HTMLDebugLog=Εμφάνιση αρχείο καταγραφής του FoxTrick  στο κάτω μέρος των σελίδων (για το τον εντοπισμό σφαλμάτων)
 
-foxtrick.prefs.permissionsHint=%s χρειάζεται άδεια πρόσβασης γα να εκτελείτε. Να επιτρέπεται η πρόσβαση;
+prefs.permissionsHint=%s χρειάζεται άδεια πρόσβασης γα να εκτελείτε. Να επιτρέπεται η πρόσβαση;
 
 ###EOF
