--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -1037,9 +1037,9 @@ exception.error=Error %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=preferencias
-foxtrick.prefs.preferences=Preferencias
+prefs.title=Preferencias
 foxtrick.log.header=Foxtrick Log
 # keep the following line untranslated
 foxtrick.log.env=Versión %1, %2 plataforma, %3 local, %4 layout, %5 dirección
@@ -1048,7 +1048,7 @@ status.active=Activo
 status.enabled=Habilitado pero no activo en &s
 status.disabled=Deshabilitado
 
-prefs.screenshot=Captura de pantalla
+module.screenshot=Captura de pantalla
 
 # tabs in preferences page
 #tabs
@@ -1066,27 +1066,27 @@ tab.about=Acerca de
 tab.changes=Cambios
 tab.help=Ayuda
 
-foxtrick.prefs.setup.locale=Configuración de idioma
-foxtrick.prefs.setup.dateFormat=Configuración de formato de fecha
-foxtrick.prefs.setup.country=Configuración de país
+prefs.setup.locale=Configuración de idioma
+prefs.setup.dateFormat=Configuración de formato de fecha
+prefs.setup.country=Configuración de país
 
-foxtrick.prefs.captionCleanupBranch=Preferencias almacenadas
-foxtrick.prefs.captionLoadSavePrefs=Exportar o importar preferencias
-foxtrick.prefs.labelCleanupBranch=Restaurar configuración por defecto de Foxtrick (sólo preferencias, no configuración personal. Requiere reiniciar)
+prefs.storedData.title=Preferencias almacenadas
+prefs.loadSave.title=Exportar o importar preferencias
+prefs.storedData.restoreDefault=Restaurar configuración por defecto de Foxtrick (sólo preferencias, no configuración personal. Requiere reiniciar)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Deshabilitar todos los módulos de foxtrick
-foxtrick.prefs.labelSavePrefs=Exportar preferencias y configuración personal
-foxtrick.prefs.labelSavePrefs_Prefs=preferencias
-foxtrick.prefs.labelSavePrefs_Notes=Exportar preferencias de foxtrick (notas, plantillas y links personalizados)
-foxtrick.prefs.saveNotice=Copia el contenido del área de texto y guárdalo de modo que puedas importar las preferencias en el futuro.
-foxtrick.prefs.labelLoadPrefs=Importar preferencias de foxtrick (Configuración actual puede ser sobreescrita. Requiere reiniciar)
-foxtrick.prefs.loadNotice=Pega las preferencias almacenadas en el área de texto y pulsa "Importar" para importar tus preferencias.
-foxtrick.prefs.captionDisableSettings=Deshabilitar Foxtrick
-foxtrick.prefs.stagepref=Deshabilitar Foxtrick en Stage
-foxtrick.prefs.disableTemporaryLabel=Deshabilitar Foxtrick temporalmente
-foxtrick.prefs.saved=¡Preferencias guardadas\!
-foxtrick.prefs.loaded=¡Preferencias cargadas\!
-foxtrick.prefs.dismissNotice=(haz click para descartar el aviso)
+prefs.storedData.disableAll=Deshabilitar todos los módulos de foxtrick
+prefs.loadSave.export=Exportar preferencias y configuración personal
+prefs.loadSave.export.prefs=preferencias
+prefs.loadSave.export.notes=Exportar preferencias de foxtrick (notas, plantillas y links personalizados)
+prefs.loadSave.export.notice=Copia el contenido del área de texto y guárdalo de modo que puedas importar las preferencias en el futuro.
+prefs.loadSave.import=Importar preferencias de foxtrick (Configuración actual puede ser sobreescrita. Requiere reiniciar)
+prefs.loadSave.import.notice=Pega las preferencias almacenadas en el área de texto y pulsa "Importar" para importar tus preferencias.
+prefs.disable.title=Deshabilitar Foxtrick
+prefs.disable.stage=Deshabilitar Foxtrick en Stage
+prefs.disable.temporary=Deshabilitar Foxtrick temporalmente
+prefs.feedback.saved=¡Preferencias guardadas\!
+prefs.feedback.loaded=¡Preferencias cargadas\!
+prefs.feedback.dismiss=(haz click para descartar el aviso)
 
 
 link.title=Links
@@ -1101,8 +1101,8 @@ link.nightlySafari=Desarrollo basado en Safari
 link.recentChanges=Cambios recientes
 
 
-foxtrick.showReleaseNotes=Muestra las notas de la versión después de actualizaciones de FoxTrick
-foxtrick.versionReleaseNotes=Muestra las notas de la versión para\:
+releaseNotes.show=Muestra las notas de la versión después de actualizaciones de FoxTrick
+releaseNotes.showFor=Muestra las notas de la versión para\:
 
 about.copyright=Copyright
 about.maintainers=Mantenedores
@@ -1113,14 +1113,14 @@ about.designers=Diseñadores
 prefs.view.by.category=Por categoría
 prefs.view.by.page=Por última página HT
 
-delete_foxtrick_branches_ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará\!
-disable_all_foxtrick_modules_ask=¿Desea deshabilitar todos los módulos?\n
-revoke_permissions_ask=¿Está seguro que desea revocar todos los permisos opcionales?
+prefs.delete_foxtrick_branches_ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará\!
+prefs.disable_all_foxtrick_modules_ask=¿Desea deshabilitar todos los módulos?\n
+prefs.revoke_permissions_ask=¿Está seguro que desea revocar todos los permisos opcionales?
 
-foxtrick.prefs.AdditionalOptions=Opciones adicionales
-foxtrick.prefs.smallcopyicons=Mostrar iconos para copiar en el encabezado en lugar de en la barra lateral
-foxtrick.prefs.DisplayHTMLDebugOutput=Mostrar salida adicional de debug en la página de Hattrick (para desarrolladores)
+prefs.additional.title=Opciones adicionales
+prefs.additional.smallCopyIcons=Mostrar iconos para copiar en el encabezado en lugar de en la barra lateral
+prefs.additional.HTMLDebugLog=Mostrar salida adicional de debug en la página de Hattrick (para desarrolladores)
 
-foxtrick.prefs.permissionsHint=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
+prefs.permissionsHint=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
 
 ###EOF
