--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -979,16 +979,16 @@ exception.error=خطا%s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=فاکس تريک
+toolbar.title=فاکس تريک
 preferences=تنظيمات
-foxtrick.prefs.preferences=تنظيمات فاکس تريک
+prefs.title=تنظيمات فاکس تريک
 # keep the following line untranslated
 
 status.active=فعال
 status.enabled=فعال اما فعال نيست در %s
 status.disabled=غير فعال
 
-prefs.screenshot=نمايش تصويري
+module.screenshot=نمايش تصويري
 
 # tabs in preferences page
 #tabs
@@ -1004,27 +1004,27 @@ tab.about=درباره...
 tab.changes=تغييرات
 tab.help=راهنما
 
-foxtrick.prefs.setup.locale=زبان
-foxtrick.prefs.setup.dateFormat=نوع تاريخ
-foxtrick.prefs.setup.country=کشور
+prefs.setup.locale=زبان
+prefs.setup.dateFormat=نوع تاريخ
+prefs.setup.country=کشور
 
-foxtrick.prefs.captionCleanupBranch=تنظيمات ذخيره شده
-foxtrick.prefs.captionLoadSavePrefs=ورود و صدور تنظيمات
-foxtrick.prefs.labelCleanupBranch=بازگشت تنظيمات به حالت اوليه(فقط تنظيمات نه تنظيمات شخصي.)
+prefs.storedData.title=تنظيمات ذخيره شده
+prefs.loadSave.title=ورود و صدور تنظيمات
+prefs.storedData.restoreDefault=بازگشت تنظيمات به حالت اوليه(فقط تنظيمات نه تنظيمات شخصي.)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=غير فعال کردن تمام قسمت ها
-foxtrick.prefs.labelSavePrefs=صدور تنظيمات يا تنظيمات شخصي
-foxtrick.prefs.labelSavePrefs_Prefs=تنظيمات
-foxtrick.prefs.labelSavePrefs_Notes=تنظيمات شخصي (الگوها , پيوند ها , فيلتر نقلو انتقالات)
-foxtrick.prefs.saveNotice=متني که در کادر ميبيند را کپي کنيد تا در اينده بتوانيد تنظيمات را وارد کنيد..
-foxtrick.prefs.labelLoadPrefs=ورود تنظيمات (تنظيمات فعلي باز نويسي خواهند شد)
-foxtrick.prefs.loadNotice=تنظيماتي را که قبلا سيو کرديد در اين کادر وارد کنيد و کليد ورود را بزنيد.
-foxtrick.prefs.captionDisableSettings=غير فعال کردن فاکس تريک
-foxtrick.prefs.stagepref=غير فعال کردن فاکس تريک در سرور استيج
-foxtrick.prefs.disableTemporaryLabel=غير فعال کردن فاکس تريک به طور موقت
-foxtrick.prefs.saved=تنظيمات ذخيره شد\!
-foxtrick.prefs.loaded=تنظيمات بارگزاري شد\!
-foxtrick.prefs.dismissNotice=(کليک کنيد تا اعلان ناديده گرفته شود)
+prefs.storedData.disableAll=غير فعال کردن تمام قسمت ها
+prefs.loadSave.export=صدور تنظيمات يا تنظيمات شخصي
+prefs.loadSave.export.prefs=تنظيمات
+prefs.loadSave.export.notes=تنظيمات شخصي (الگوها , پيوند ها , فيلتر نقلو انتقالات)
+prefs.loadSave.export.notice=متني که در کادر ميبيند را کپي کنيد تا در اينده بتوانيد تنظيمات را وارد کنيد..
+prefs.loadSave.import=ورود تنظيمات (تنظيمات فعلي باز نويسي خواهند شد)
+prefs.loadSave.import.notice=تنظيماتي را که قبلا سيو کرديد در اين کادر وارد کنيد و کليد ورود را بزنيد.
+prefs.disable.title=غير فعال کردن فاکس تريک
+prefs.disable.stage=غير فعال کردن فاکس تريک در سرور استيج
+prefs.disable.temporary=غير فعال کردن فاکس تريک به طور موقت
+prefs.feedback.saved=تنظيمات ذخيره شد\!
+prefs.feedback.loaded=تنظيمات بارگزاري شد\!
+prefs.feedback.dismiss=(کليک کنيد تا اعلان ناديده گرفته شود)
 
 
 link.title=پيوند ها
@@ -1037,8 +1037,8 @@ link.nightlyChrome=نسخه هاي فاکس تريک براي مسئولين (گ
 link.recentChanges=تغييرات
 
 
-foxtrick.showReleaseNotes=نمايش متن تغييرات نسخه جديد بعد از به روز رساني
-foxtrick.versionReleaseNotes=نمايش متن تغييرات براي \:
+releaseNotes.show=نمايش متن تغييرات نسخه جديد بعد از به روز رساني
+releaseNotes.showFor=نمايش متن تغييرات براي \:
 
 about.copyright=حق کپي
 about.developers=مسئولين
@@ -1047,12 +1047,12 @@ about.designers=طراحان
 
 prefs.view.by.category=نمایش بر اساس طبقه‌بندی
 
-delete_foxtrick_branches_ask=ايا مطمئن هستيد که ميخواهيد تنظيمات را به حالت اوليه برگردانيد?
-disable_all_foxtrick_modules_ask=ايا مطمئن هستيد که ميخواهيد تمام قسمتها را غير فعال کنيد?
+prefs.delete_foxtrick_branches_ask=ايا مطمئن هستيد که ميخواهيد تنظيمات را به حالت اوليه برگردانيد?
+prefs.disable_all_foxtrick_modules_ask=ايا مطمئن هستيد که ميخواهيد تمام قسمتها را غير فعال کنيد?
 
-foxtrick.prefs.AdditionalOptions=تنظيمات اضافه
-foxtrick.prefs.smallcopyicons=نمايش ايکن براي کپي نمودن در کنار صفحه
-foxtrick.prefs.DisplayHTMLDebugOutput=نمايش متني براي مشاهده خروجي در هر صفحه براي پيدا کردن معايب (براي مسئولين)
+prefs.additional.title=تنظيمات اضافه
+prefs.additional.smallCopyIcons=نمايش ايکن براي کپي نمودن در کنار صفحه
+prefs.additional.HTMLDebugLog=نمايش متني براي مشاهده خروجي در هر صفحه براي پيدا کردن معايب (براي مسئولين)
 
 
 ###EOF
