--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -1095,9 +1095,9 @@ exception.error=Virhe %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Asetukset
-foxtrick.prefs.preferences=FoxTrickin asetukset
+prefs.title=FoxTrickin asetukset
 foxtrick.log.header=FoxTrickin logi
 # keep the following line untranslated
 
@@ -1105,7 +1105,7 @@ status.active=aktiivinen
 status.enabled=sallittu, mutta ei aktiivinen %s\:lla
 status.disabled=lamautettu
 
-prefs.screenshot=Kuvakaappaus
+module.screenshot=Kuvakaappaus
 
 # tabs in preferences page
 #tabs
@@ -1123,33 +1123,33 @@ tab.about=Lisätietoa
 tab.changes=Muutokset
 tab.help=Apua
 
-foxtrick.prefs.setup=Asetukset
-foxtrick.prefs.setup.desc=Nämä ovat FoxTrickin tunnistamat asetuksesi. Jos ne ovat väärät, {raportoi siitä}.
-foxtrick.prefs.setup.locale=Kieli
-foxtrick.prefs.setup.dateFormat=Päivämäärän muoto
-foxtrick.prefs.setup.country=Maa
+prefs.setup=Asetukset
+prefs.setup.desc=Nämä ovat FoxTrickin tunnistamat asetuksesi. Jos ne ovat väärät, {raportoi siitä}.
+prefs.setup.locale=Kieli
+prefs.setup.dateFormat=Päivämäärän muoto
+prefs.setup.country=Maa
 
-foxtrick.prefs.captionCleanupBranch=Tallennetut asetukset
-foxtrick.prefs.captionLoadSavePrefs=Viedä tai tuoda -asetukset
-foxtrick.prefs.labelCleanupBranch=Palauta oletusasetukset (Vain asetukset, ei henkilökohtaisia asetuksia. Vaatii uudelleenkäynnistyksen.)
+prefs.storedData.title=Tallennetut asetukset
+prefs.loadSave.title=Viedä tai tuoda -asetukset
+prefs.storedData.restoreDefault=Palauta oletusasetukset (Vain asetukset, ei henkilökohtaisia asetuksia. Vaatii uudelleenkäynnistyksen.)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Toimii vain tällä selaimella. Kumotaksesi kokonaan FoxTrickin sisäänpääsyn joukkueellesi käytä Hattrickin {CHPP management}.
-foxtrick.prefs.labelDisableAll=Kytke kaikki moduulit pois päältä
-foxtrick.prefs.labelRevokePermissions=Kumoa kaikki valinnaiset oikeudet (vain Chrome)
-foxtrick.prefs.labelSavePrefs=Vie asetukset ja/tai henkilökohtaiset asetukset
-foxtrick.prefs.labelSavePrefs_Prefs=Vie asetukset
-foxtrick.prefs.labelSavePrefs_Notes=Vie henkilökohtaiset asetukset (muistiinpanot, tallennukset &  käytännönlinkit)
-foxtrick.prefs.saveNotice=Kopioi sisältö tekstialueessa ja tallenna tiedostona, jotta voit tuoda ne asetukset tulevaisuudessa.
-foxtrick.prefs.labelLoadPrefs=Tuo asetukset (Nykyiset asetukset saattaa olla päällekirjoitettu. Vaatii uudelleenkäynnistyksen)
-foxtrick.prefs.loadNotice=Liitä tallentamasi asetukset tekstialueessa ja paina "tuo" tuodaksesi asetuksesi.
-foxtrick.prefs.captionDisableSettings=Lamauta Foxtrick
-foxtrick.prefs.stagepref=Estä Foxtrick Stage-serverillä
-foxtrick.prefs.disableTemporaryLabel=Estä Foxtrick väliaikaisesti
-foxtrick.prefs.saved=Asetukset tallennettu\!
-foxtrick.prefs.loaded=Asetukset ladattu\!
-foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+prefs.storedData.oauth.delete.desc=Toimii vain tällä selaimella. Kumotaksesi kokonaan FoxTrickin sisäänpääsyn joukkueellesi käytä Hattrickin {CHPP management}.
+prefs.storedData.disableAll=Kytke kaikki moduulit pois päältä
+prefs.storedData.revokePermissions=Kumoa kaikki valinnaiset oikeudet (vain Chrome)
+prefs.loadSave.export=Vie asetukset ja/tai henkilökohtaiset asetukset
+prefs.loadSave.export.prefs=Vie asetukset
+prefs.loadSave.export.notes=Vie henkilökohtaiset asetukset (muistiinpanot, tallennukset &  käytännönlinkit)
+prefs.loadSave.export.notice=Kopioi sisältö tekstialueessa ja tallenna tiedostona, jotta voit tuoda ne asetukset tulevaisuudessa.
+prefs.loadSave.import=Tuo asetukset (Nykyiset asetukset saattaa olla päällekirjoitettu. Vaatii uudelleenkäynnistyksen)
+prefs.loadSave.import.notice=Liitä tallentamasi asetukset tekstialueessa ja paina "tuo" tuodaksesi asetuksesi.
+prefs.disable.title=Lamauta Foxtrick
+prefs.disable.stage=Estä Foxtrick Stage-serverillä
+prefs.disable.temporary=Estä Foxtrick väliaikaisesti
+prefs.feedback.saved=Asetukset tallennettu\!
+prefs.feedback.loaded=Asetukset ladattu\!
+prefs.feedback.dismiss=(click to dismiss this notice)
 
-pref.xmlLoad=Lataa XML\:stä lisätietoa Hattrickiin
+prefs.additional.xmlLoad=Lataa XML\:stä lisätietoa Hattrickiin
 
 link.title=Linkit
 link.homepage=Kotisivu
@@ -1164,8 +1164,8 @@ link.recentChanges=Viimeisimmät muutokset
 
 module.link=Voit kopioida ja liittää suoraan tänne osoittavan linkin foorumille
 
-foxtrick.showReleaseNotes=Näytä julkaisutiedot Foxtrickin päivityksen jälkeen
-foxtrick.versionReleaseNotes=Show release notes for\:
+releaseNotes.show=Näytä julkaisutiedot Foxtrickin päivityksen jälkeen
+releaseNotes.showFor=Show release notes for\:
 
 about.copyright=Tekijänoikeudet
 about.maintainers=Ylläpitäjät
@@ -1176,14 +1176,14 @@ about.designers=Muotoilijat
 prefs.view.by.category=Näytä kategorioittain
 prefs.view.by.page=Näytä viimeisen HT-sivun mukaan
 
-delete_foxtrick_branches_ask=Oletko varma, että haluat palauttaa oletusasetukset?\nFirefox täytyy uudelleenkäynnistää tämän aikaan saamiseksi\!
-disable_all_foxtrick_modules_ask=Oletko varma, että haluat kytkeä kaikki moduulit pois päältä?\n
-revoke_permissions_ask=Haluatko varmasti kumota kaikki valinnaiset oikeudet?
+prefs.delete_foxtrick_branches_ask=Oletko varma, että haluat palauttaa oletusasetukset?\nFirefox täytyy uudelleenkäynnistää tämän aikaan saamiseksi\!
+prefs.disable_all_foxtrick_modules_ask=Oletko varma, että haluat kytkeä kaikki moduulit pois päältä?\n
+prefs.revoke_permissions_ask=Haluatko varmasti kumota kaikki valinnaiset oikeudet?
 
-foxtrick.prefs.AdditionalOptions=Lisäasetukset
-foxtrick.prefs.smallcopyicons=Näytä pienet kopiointi-ikonit otsakkeissa sen sijaan että kopiointi-ikonit olisi erillisessä sivuboxissa
-foxtrick.prefs.DisplayHTMLDebugOutput=Näytä Foxtrick-loki sivujen lopussa (testaamiseen)
+prefs.additional.title=Lisäasetukset
+prefs.additional.smallCopyIcons=Näytä pienet kopiointi-ikonit otsakkeissa sen sijaan että kopiointi-ikonit olisi erillisessä sivuboxissa
+prefs.additional.HTMLDebugLog=Näytä Foxtrick-loki sivujen lopussa (testaamiseen)
 
-foxtrick.prefs.permissionsHint=%s tarvitsee luvan toimiakseen. Salli pääsy seuraavassa valintaikkunassa.
+prefs.permissionsHint=%s tarvitsee luvan toimiakseen. Salli pääsy seuraavassa valintaikkunassa.
 
 ###EOF
