--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -731,12 +731,12 @@ tab.help=Help
 
 
 
-foxtrick.prefs.setup.locale=Language
-foxtrick.prefs.setup.dateFormat=Date format
-foxtrick.prefs.setup.country=Country
+prefs.setup.locale=Language
+prefs.setup.dateFormat=Date format
+prefs.setup.country=Country
 
-foxtrick.prefs.captionCleanupBranch=Stored preferences
-foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
+prefs.storedData.title=Stored preferences
+prefs.loadSave.title=Export or import preferences
 
 
 #statusbarpref
@@ -749,17 +749,17 @@ foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 
 
 
-foxtrick.prefs.labelCleanupBranch=Restore default FoxTrick settings (only preferences, no personal settings. requires restart)
-foxtrick.prefs.labelDisableAll=Disables all FoxTrick modules
-foxtrick.prefs.labelSavePrefs=Export FoxTrick preferences and personal settings
-foxtrick.prefs.labelSavePrefs_Prefs=Export FoxTrick preferences
-foxtrick.prefs.labelSavePrefs_Notes=Export personal settings (notes, templates & custom links)
-foxtrick.prefs.labelLoadPrefs=Import FoxTrick preferences (Current settings may be overwritten. Requires restart)
-foxtrick.prefs.captionDisableSettings=Disable FoxTrick
+prefs.storedData.restoreDefault=Restore default FoxTrick settings (only preferences, no personal settings. requires restart)
+prefs.storedData.disableAll=Disables all FoxTrick modules
+prefs.loadSave.export=Export FoxTrick preferences and personal settings
+prefs.loadSave.export.prefs=Export FoxTrick preferences
+prefs.loadSave.export.notes=Export personal settings (notes, templates & custom links)
+prefs.loadSave.import=Import FoxTrick preferences (Current settings may be overwritten. Requires restart)
+prefs.disable.title=Disable FoxTrick
 
 
-foxtrick.prefs.stagepref=Disable FoxTrick on Stage server
-foxtrick.prefs.disableTemporaryLabel=Disable FoxTrick temporarily
+prefs.disable.stage=Disable FoxTrick on Stage server
+prefs.disable.temporary=Disable FoxTrick temporarily
 
 button.save=Save
 
@@ -773,18 +773,18 @@ button.import=Load
 
 
 
-delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
-disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
+prefs.delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
+prefs.disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
 
 #status bar menu
-foxtrick.prefs.preferences=Preferences
+prefs.title=Preferences
 
 
 
-foxtrick.prefs.AdditionalOptions=Additional options
+prefs.additional.title=Additional options
 
-foxtrick.prefs.smallcopyicons=Small copy icons in the header instead of seperate sidebox
-foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick page (for developers)
+prefs.additional.smallCopyIcons=Small copy icons in the header instead of seperate sidebox
+prefs.additional.HTMLDebugLog=Show additional debug output on Hattrick page (for developers)
 
 #show_once messages
 
