--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -420,7 +420,7 @@ button.disableAll=Alles útskeakelje
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick.prefs.preferences=Foarkeuren
+prefs.title=Foarkeuren
 # keep the following line untranslated
 
 
@@ -435,22 +435,22 @@ tab.forum=Foarum
 tab.links=Koppelings
 tab.about=Oer Foxtrick
 
-foxtrick.prefs.setup.locale=Taalynstellings
-foxtrick.prefs.setup.dateFormat=Datumformaatynstellings
-foxtrick.prefs.setup.country=Lânynstellings
+prefs.setup.locale=Taalynstellings
+prefs.setup.dateFormat=Datumformaatynstellings
+prefs.setup.country=Lânynstellings
 
-foxtrick.prefs.captionCleanupBranch=Opsleine foarkeuren
-foxtrick.prefs.captionLoadSavePrefs=Foarkeuren ymportearje of eksportearje
-foxtrick.prefs.labelCleanupBranch=Herstel standert Foxtrickynstellings (herstart nedich)
+prefs.storedData.title=Opsleine foarkeuren
+prefs.loadSave.title=Foarkeuren ymportearje of eksportearje
+prefs.storedData.restoreDefault=Herstel standert Foxtrickynstellings (herstart nedich)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Skeakelt alle Foxtrick-modules út
-foxtrick.prefs.labelSavePrefs=Eksportear foxtrickfoarkeuren
-foxtrick.prefs.labelSavePrefs_Prefs=Eksportear foxtrickfoarkeuren
-foxtrick.prefs.labelSavePrefs_Notes=Eksportear persoanlike ynstellings (notysjes, templates en eigen koppelings)
-foxtrick.prefs.labelLoadPrefs=Ymportear foxtrickfoarkeuren (Foarkeuren kinne oerskreaun wurde. Herstart nedich)
-foxtrick.prefs.captionDisableSettings=Foxtrick útskeakelje
-foxtrick.prefs.stagepref=Skeakelje Foxtrick út op Stage-server
-foxtrick.prefs.disableTemporaryLabel=Foxtrick tydlik útskeakelje
+prefs.storedData.disableAll=Skeakelt alle Foxtrick-modules út
+prefs.loadSave.export=Eksportear foxtrickfoarkeuren
+prefs.loadSave.export.prefs=Eksportear foxtrickfoarkeuren
+prefs.loadSave.export.notes=Eksportear persoanlike ynstellings (notysjes, templates en eigen koppelings)
+prefs.loadSave.import=Ymportear foxtrickfoarkeuren (Foarkeuren kinne oerskreaun wurde. Herstart nedich)
+prefs.disable.title=Foxtrick útskeakelje
+prefs.disable.stage=Skeakelje Foxtrick út op Stage-server
+prefs.disable.temporary=Foxtrick tydlik útskeakelje
 
 
 
@@ -458,8 +458,8 @@ foxtrick.prefs.disableTemporaryLabel=Foxtrick tydlik útskeakelje
 
 
 
-delete_foxtrick_branches_ask=Wolst echt de standertynstellings werom sette?\nFirefox moat hjirfoar herstarte wurde\!
-disable_all_foxtrick_modules_ask=Wolst echt alle modules útskeakelje?\n
+prefs.delete_foxtrick_branches_ask=Wolst echt de standertynstellings werom sette?\nFirefox moat hjirfoar herstarte wurde\!
+prefs.disable_all_foxtrick_modules_ask=Wolst echt alle modules útskeakelje?\n
 
 
 
