--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -695,9 +695,9 @@ api.serverUnavailable=Servidor non dispoñible
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Preferencias
-foxtrick.prefs.preferences=Preferencias
+prefs.title=Preferencias
 foxtrick.log.header=Traza de FoxTrick
 # keep the following line untranslated
 
@@ -705,7 +705,7 @@ status.active=activo
 status.enabled=habilitado, pero non activo en %s
 status.disabled=deshabilitado
 
-prefs.screenshot=Captura de pantalla
+module.screenshot=Captura de pantalla
 
 # tabs in preferences page
 #tabs
@@ -723,33 +723,33 @@ tab.about=Acerca de
 tab.changes=Trocos
 tab.help=Axuda
 
-foxtrick.prefs.setup=Configuración
-foxtrick.prefs.setup.desc=Estes son os axustes que FoxTrick detectou. Si non é correcto, {denunciao por favor}.
-foxtrick.prefs.setup.locale=Lingua
-foxtrick.prefs.setup.dateFormat=Preferencias do formato da data
-foxtrick.prefs.setup.country=Preferencias do país
+prefs.setup=Configuración
+prefs.setup.desc=Estes son os axustes que FoxTrick detectou. Si non é correcto, {denunciao por favor}.
+prefs.setup.locale=Lingua
+prefs.setup.dateFormat=Preferencias do formato da data
+prefs.setup.country=Preferencias do país
 
-foxtrick.prefs.captionCleanupBranch=Preferencias cargadas
-foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferencias
-foxtrick.prefs.labelCleanupBranch=Recupera as opcións por defecto do Foxtrick (require reiniciar o navegador)
+prefs.storedData.title=Preferencias cargadas
+prefs.loadSave.title=Exportar ou importar preferencias
+prefs.storedData.restoreDefault=Recupera as opcións por defecto do Foxtrick (require reiniciar o navegador)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Só se aplica para este navegador. Para refusar completamente o acceso de Foxtrick a un equipo, use {a xestión CHPP de} Hattrick.
-foxtrick.prefs.labelDisableAll=Desactiva tódolos módulos do Foxtrick
-foxtrick.prefs.labelRevokePermissions=Refusar todos os permisos opcionais (só para Chrome)
-foxtrick.prefs.labelSavePrefs=Exportar opcións do foxtrick e as persoais
-foxtrick.prefs.labelSavePrefs_Prefs=Exportar opcións de foxtrick
-foxtrick.prefs.labelSavePrefs_Notes=Exportar opcións persoais (notas, plantiñas e ligazóns personalizadas)
-foxtrick.prefs.saveNotice=Copiar o contido da área de texto e gardar como arquivo, para que poidas importar as preferencias nun futuro.
-foxtrick.prefs.labelLoadPrefs=Importar opcións do foxtrick (Preferencias actuais se sobreescribirán. Require reinicio do navegador)
-foxtrick.prefs.loadNotice=Pega as túas preferencias gardadas na área de texto e prime "Importar" para importar as túas preferencias.
-foxtrick.prefs.captionDisableSettings=Desactivar Foxtrick
-foxtrick.prefs.stagepref=Desactivar Foxtrick no servidor Stage
-foxtrick.prefs.disableTemporaryLabel=Desactivar Foxtrick temporalmente
-foxtrick.prefs.saved=Preferencias gardadas\!
-foxtrick.prefs.loaded=Preferencias cargadas\!
-foxtrick.prefs.dismissNotice=(faga clic para desbotar este aviso)
+prefs.storedData.oauth.delete.desc=Só se aplica para este navegador. Para refusar completamente o acceso de Foxtrick a un equipo, use {a xestión CHPP de} Hattrick.
+prefs.storedData.disableAll=Desactiva tódolos módulos do Foxtrick
+prefs.storedData.revokePermissions=Refusar todos os permisos opcionais (só para Chrome)
+prefs.loadSave.export=Exportar opcións do foxtrick e as persoais
+prefs.loadSave.export.prefs=Exportar opcións de foxtrick
+prefs.loadSave.export.notes=Exportar opcións persoais (notas, plantiñas e ligazóns personalizadas)
+prefs.loadSave.export.notice=Copiar o contido da área de texto e gardar como arquivo, para que poidas importar as preferencias nun futuro.
+prefs.loadSave.import=Importar opcións do foxtrick (Preferencias actuais se sobreescribirán. Require reinicio do navegador)
+prefs.loadSave.import.notice=Pega as túas preferencias gardadas na área de texto e prime "Importar" para importar as túas preferencias.
+prefs.disable.title=Desactivar Foxtrick
+prefs.disable.stage=Desactivar Foxtrick no servidor Stage
+prefs.disable.temporary=Desactivar Foxtrick temporalmente
+prefs.feedback.saved=Preferencias gardadas\!
+prefs.feedback.loaded=Preferencias cargadas\!
+prefs.feedback.dismiss=(faga clic para desbotar este aviso)
 
-pref.xmlLoad=Carga os XMLs para obter información extra de Hattrick
+prefs.additional.xmlLoad=Carga os XMLs para obter información extra de Hattrick
 
 link.title=Ligazóns
 link.homepage=Páxina de inicio
@@ -760,8 +760,8 @@ link.recentChanges=Trocos recentes
 
 module.link=Podes copiar e pegar este enlace na conferencia para dirixir aquí
 
-foxtrick.showReleaseNotes=Mostrar notas da edición despois de cada actualización
-foxtrick.versionReleaseNotes=Mostrar notas da edición para\:
+releaseNotes.show=Mostrar notas da edición despois de cada actualización
+releaseNotes.showFor=Mostrar notas da edición para\:
 
 about.copyright=Dereitos de autor
 about.developers=Desarrolladores
@@ -770,12 +770,12 @@ about.designers=Diseñadores
 
 prefs.view.by.category=Ver por categoría
 
-delete_foxtrick_branches_ask=Estás seguro de que queres recuperar as opcións por defecto?\nFirefox ten que reiniciarse para que isto faga efecto\!
-disable_all_foxtrick_modules_ask=Estás seguro de querer desactivar tódolos módulos?\n
-revoke_permissions_ask=Estás seguro de querer refusar todos os permisos opcionais?
+prefs.delete_foxtrick_branches_ask=Estás seguro de que queres recuperar as opcións por defecto?\nFirefox ten que reiniciarse para que isto faga efecto\!
+prefs.disable_all_foxtrick_modules_ask=Estás seguro de querer desactivar tódolos módulos?\n
+prefs.revoke_permissions_ask=Estás seguro de querer refusar todos os permisos opcionais?
 
-foxtrick.prefs.AdditionalOptions=Opcións xerais
+prefs.additional.title=Opcións xerais
 
-foxtrick.prefs.permissionsHint=%s precisa permisos para traballar. Permítelle o acceso na seguinte fiestra. Se declinas, este módulo será desactivado.
+prefs.permissionsHint=%s precisa permisos para traballar. Permítelle o acceso na seguinte fiestra. Se declinas, este módulo será desactivado.
 
 ###EOF
