--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -448,8 +448,8 @@ tab.help=עזרה
 
 
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelSavePrefs_Prefs=העדפות
-foxtrick.prefs.saved=העדפות נשמרו\!
+prefs.loadSave.export.prefs=העדפות
+prefs.feedback.saved=העדפות נשמרו\!
 
 
 link.title=קישורים
@@ -461,9 +461,9 @@ link.recentChanges=עדכונים אחרונים
 about.translators=מתרגמים
 
 
-delete_foxtrick_branches_ask=﻿האם אתה בטוח שברצונך לשחזר את הגדרות ברירת המחדל?
+prefs.delete_foxtrick_branches_ask=﻿האם אתה בטוח שברצונך לשחזר את הגדרות ברירת המחדל?
 
-foxtrick.prefs.AdditionalOptions=אפשרויות כלליות
+prefs.additional.title=אפשרויות כלליות
 
 
 ###EOF
