--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -1108,9 +1108,9 @@ exception.error=Greška %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Postavke
-foxtrick.prefs.preferences=FoxTrickove Postavke
+prefs.title=FoxTrickove Postavke
 foxtrick.log.header=FoxTrick zapisi
 # keep the following line untranslated
 
@@ -1118,7 +1118,7 @@ status.active=aktivan
 status.enabled=omogućen, ali neaktivan na %s
 status.disabled=onemogućen
 
-prefs.screenshot=Slika zaslona
+module.screenshot=Slika zaslona
 
 # tabs in preferences page
 #tabs
@@ -1136,36 +1136,36 @@ tab.about=O Foxtricku
 tab.changes=Promjene
 tab.help=Pomoć
 
-foxtrick.prefs.setup=Postavljanje
-foxtrick.prefs.setup.desc=To su vaše postavke koje je Foxtrick otkrio. Ako su netočne, {molimo prijavite}.
-foxtrick.prefs.setup.locale=Jezična podešenja
-foxtrick.prefs.setup.dateFormat=Podesiti format datuma
-foxtrick.prefs.setup.country=Podesiti državu
+prefs.setup=Postavljanje
+prefs.setup.desc=To su vaše postavke koje je Foxtrick otkrio. Ako su netočne, {molimo prijavite}.
+prefs.setup.locale=Jezična podešenja
+prefs.setup.dateFormat=Podesiti format datuma
+prefs.setup.country=Podesiti državu
 
-foxtrick.prefs.captionCleanupBranch=Spremljena podešenja
-foxtrick.prefs.captionLoadSavePrefs=Uvezi/izvezi podešenja
-foxtrick.prefs.labelCleanupBranch=Vrati uobičajene postavke (samo za postavke, ne i za osobna podešenja. Potreban restart)
-foxtrick.prefs.oauth.delete=Brisanje OAuth koda za odabranu momčad.
+prefs.storedData.title=Spremljena podešenja
+prefs.loadSave.title=Uvezi/izvezi podešenja
+prefs.storedData.restoreDefault=Vrati uobičajene postavke (samo za postavke, ne i za osobna podešenja. Potreban restart)
+prefs.storedData.oauth.delete=Brisanje OAuth koda za odabranu momčad.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Odnosi se samo na ovaj preglednik. Kako biste u potpunosti ukinuli FoxTrickov pristup momčadi, koristite Hattrick {CHPP upravljanje}.
-foxtrick.prefs.labelDisableAll=Isključi sve opcije
-foxtrick.prefs.labelRevokePermissions=Opozvati sve dodatne dozvole (samo Chrome)
-foxtrick.prefs.labelSavePrefs=Izvezi podešenja i/ili osobne postavke
-foxtrick.prefs.labelSavePrefs_Prefs=Osobna podešenja (bilješke, predlošci i vlastiti linkovi)
-foxtrick.prefs.labelSavePrefs_Notes=Osobne postavke (Predlošci, prilagođene veze i prijenos filtera)
-foxtrick.prefs.labelSavePrefs_Token=OAuth kod
-foxtrick.prefs.saveNotice=Kopiraj sadržaj u prostoru za tekst i spremite kao datoteku, tako da bi mogao uvesti postavke u budućnosti.
-foxtrick.prefs.labelLoadPrefs=Uvezi postavke (Trenutna podešenja mogu biti uklonjena. Potreban restart.)
-foxtrick.prefs.loadNotice=Zalijepite spremljene postavke u prostoru za tekst i pritisnite 'Uvezi' za uvođenje postavki.
-foxtrick.prefs.captionDisableSettings=Isključi Foxtrick
-foxtrick.prefs.stagepref=Isključi na pokusnom ('stage') serveru
-foxtrick.prefs.disableTemporaryLabel=Privremeno isključi
-foxtrick.prefs.featureHighlight=Istakni Foxtrickove značajke
-foxtrick.prefs.saved=Postavke spremljene\!
-foxtrick.prefs.loaded=Postavke učitane\!
-foxtrick.prefs.dismissNotice=(Kliknite za odbacivanje ove obavijesti)
+prefs.storedData.oauth.delete.desc=Odnosi se samo na ovaj preglednik. Kako biste u potpunosti ukinuli FoxTrickov pristup momčadi, koristite Hattrick {CHPP upravljanje}.
+prefs.storedData.disableAll=Isključi sve opcije
+prefs.storedData.revokePermissions=Opozvati sve dodatne dozvole (samo Chrome)
+prefs.loadSave.export=Izvezi podešenja i/ili osobne postavke
+prefs.loadSave.export.prefs=Osobna podešenja (bilješke, predlošci i vlastiti linkovi)
+prefs.loadSave.export.notes=Osobne postavke (Predlošci, prilagođene veze i prijenos filtera)
+prefs.loadSave.export.token=OAuth kod
+prefs.loadSave.export.notice=Kopiraj sadržaj u prostoru za tekst i spremite kao datoteku, tako da bi mogao uvesti postavke u budućnosti.
+prefs.loadSave.import=Uvezi postavke (Trenutna podešenja mogu biti uklonjena. Potreban restart.)
+prefs.loadSave.import.notice=Zalijepite spremljene postavke u prostoru za tekst i pritisnite 'Uvezi' za uvođenje postavki.
+prefs.disable.title=Isključi Foxtrick
+prefs.disable.stage=Isključi na pokusnom ('stage') serveru
+prefs.disable.temporary=Privremeno isključi
+prefs.additional.featureHighlight=Istakni Foxtrickove značajke
+prefs.feedback.saved=Postavke spremljene\!
+prefs.feedback.loaded=Postavke učitane\!
+prefs.feedback.dismiss=(Kliknite za odbacivanje ove obavijesti)
 
-pref.xmlLoad=Učitaj XMLs za dodatne informacije od Hattricka
+prefs.additional.xmlLoad=Učitaj XMLs za dodatne informacije od Hattricka
 
 link.title=Poveznice
 link.homepage=Naslovnica
@@ -1180,9 +1180,9 @@ link.recentChanges=Posljednje promjene
 
 module.link=Možete kopirati i zalijepiti ovaj link na forumu za usmjeravanje ovdje
 
-foxtrick.showReleaseNotes=Prikaži obavijesti nakon svakog ažuriranja
-foxtrick.versionReleaseNotes=Prikaži obavijesti za\:
-foxtrick.Version=Verzija\:
+releaseNotes.show=Prikaži obavijesti nakon svakog ažuriranja
+releaseNotes.showFor=Prikaži obavijesti za\:
+releaseNotes.version=Verzija\:
 
 about.copyright=Autorsko pravo
 about.maintainers=Održavatelji
@@ -1193,16 +1193,16 @@ about.designers=Dizajneri
 prefs.view.by.category=Pogled po kategorijama
 prefs.view.by.page=Pregled po zadnjoj HT stranici
 
-delete_foxtrick_branches_ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati\!
-delete_oauth_ask=Brisanje OAuth koda za TeamID %s?
-disable_all_foxtrick_modules_ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
-revoke_permissions_ask=Jeste li sigurni da želite poništiti sve dozvole?
+prefs.delete_foxtrick_branches_ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati\!
+prefs.delete_oauth_ask=Brisanje OAuth koda za TeamID %s?
+prefs.disable_all_foxtrick_modules_ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
+prefs.revoke_permissions_ask=Jeste li sigurni da želite poništiti sve dozvole?
 
-foxtrick.prefs.AdditionalOptions=Dodatne opcije
-foxtrick.prefs.smallcopyicons=Prikazati male ikonice za kopiranje u zaglavlje umjesto u zaseban izbornik sa strane
-foxtrick.prefs.anstoss2icons=Koristi Anstoss2 ikone za specijalnosti
-foxtrick.prefs.DisplayHTMLDebugOutput=Prikazati dodatni 'debug izlaz' u podnožju stranice (samo za programere)
+prefs.additional.title=Dodatne opcije
+prefs.additional.smallCopyIcons=Prikazati male ikonice za kopiranje u zaglavlje umjesto u zaseban izbornik sa strane
+prefs.additional.anstoss2Icons=Koristi Anstoss2 ikone za specijalnosti
+prefs.additional.HTMLDebugLog=Prikazati dodatni 'debug izlaz' u podnožju stranice (samo za programere)
 
-foxtrick.prefs.permissionsHint=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
+prefs.permissionsHint=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
 
 ###EOF
