--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -1006,16 +1006,16 @@ exception.error=Hiba\: %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Beállítások
-foxtrick.prefs.preferences=FoxTrick-beállítások
+prefs.title=FoxTrick-beállítások
 # keep the following line untranslated
 
 status.active=aktív
 status.enabled=be van kapcsolva, de itt nem aktív\: %s
 status.disabled=ki van kapcsolva
 
-prefs.screenshot=Képernyőfotó
+module.screenshot=Képernyőfotó
 
 # tabs in preferences page
 #tabs
@@ -1030,27 +1030,27 @@ tab.about=Névjegy
 tab.changes=Módosítások
 tab.help=Súgó
 
-foxtrick.prefs.setup.locale=Nyelv
-foxtrick.prefs.setup.dateFormat=Dátumformátum
-foxtrick.prefs.setup.country=Ország
+prefs.setup.locale=Nyelv
+prefs.setup.dateFormat=Dátumformátum
+prefs.setup.country=Ország
 
-foxtrick.prefs.captionCleanupBranch=Tárolt beállítások
-foxtrick.prefs.captionLoadSavePrefs=A beállítások exportálása vagy importálása
-foxtrick.prefs.labelCleanupBranch=Az alapértelmezett beállítások visszaállítása (csak az alapbeállításokra vonatkozik, a személyes beállításokra nem).
+prefs.storedData.title=Tárolt beállítások
+prefs.loadSave.title=A beállítások exportálása vagy importálása
+prefs.storedData.restoreDefault=Az alapértelmezett beállítások visszaállítása (csak az alapbeállításokra vonatkozik, a személyes beállításokra nem).
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Az összes modul kikapcsolása
-foxtrick.prefs.labelSavePrefs=Az alapbeállítások és/vagy a személyes beállítások exportálása
-foxtrick.prefs.labelSavePrefs_Prefs=Alapbeállítások
-foxtrick.prefs.labelSavePrefs_Notes=Személyes beállítások (sablonok, egyedi hivatkozások és szűrők az átigazolásokhoz)
-foxtrick.prefs.saveNotice=Másold ki a szövegmezőben lévő tartalmat, és mentsd fájlként, így a jövőben is importálni tudod a beállításokat.
-foxtrick.prefs.labelLoadPrefs=Az alapbeállítások importálása (felülírja az aktuális beállításokat).
-foxtrick.prefs.loadNotice=Illeszd be a mentett beállításaidat a szövegmezőbe, majd a beállítások importálásához kattints az „Importálás” gombra.
-foxtrick.prefs.captionDisableSettings=A FoxTrick kikapcsolása
-foxtrick.prefs.stagepref=Kikapcsolás a Stage szerveren
-foxtrick.prefs.disableTemporaryLabel=Átmeneti kikapcsolás
-foxtrick.prefs.saved=A beállítások mentése sikeres\!
-foxtrick.prefs.loaded=A beállítások betöltése kész\!
-foxtrick.prefs.dismissNotice=(a megjegyzést rá kattintva tudod eltüntetni)
+prefs.storedData.disableAll=Az összes modul kikapcsolása
+prefs.loadSave.export=Az alapbeállítások és/vagy a személyes beállítások exportálása
+prefs.loadSave.export.prefs=Alapbeállítások
+prefs.loadSave.export.notes=Személyes beállítások (sablonok, egyedi hivatkozások és szűrők az átigazolásokhoz)
+prefs.loadSave.export.notice=Másold ki a szövegmezőben lévő tartalmat, és mentsd fájlként, így a jövőben is importálni tudod a beállításokat.
+prefs.loadSave.import=Az alapbeállítások importálása (felülírja az aktuális beállításokat).
+prefs.loadSave.import.notice=Illeszd be a mentett beállításaidat a szövegmezőbe, majd a beállítások importálásához kattints az „Importálás” gombra.
+prefs.disable.title=A FoxTrick kikapcsolása
+prefs.disable.stage=Kikapcsolás a Stage szerveren
+prefs.disable.temporary=Átmeneti kikapcsolás
+prefs.feedback.saved=A beállítások mentése sikeres\!
+prefs.feedback.loaded=A beállítások betöltése kész\!
+prefs.feedback.dismiss=(a megjegyzést rá kattintva tudod eltüntetni)
 
 
 link.title=Hivatkozások
@@ -1063,9 +1063,9 @@ link.nightlyChrome=Fejlesztői fordítások (buildek) a Google Chrome-hoz
 link.recentChanges=A legutóbbi módosítások
 
 
-foxtrick.showReleaseNotes=A FoxTrick-frissítések utáni kiadási megjegyzések megjelenítése
-foxtrick.versionReleaseNotes=Kiadási megjegyzések megjelenítése a következőhöz\:
-foxtrick.Version=Verzió\:
+releaseNotes.show=A FoxTrick-frissítések utáni kiadási megjegyzések megjelenítése
+releaseNotes.showFor=Kiadási megjegyzések megjelenítése a következőhöz\:
+releaseNotes.version=Verzió\:
 
 about.copyright=Copyright
 about.developers=Fejlesztők
@@ -1073,13 +1073,13 @@ about.translators=Fordítók
 about.designers=Tervezők
 
 
-delete_foxtrick_branches_ask=Biztosan visszaállítod az alapértelmezett beállításokat?
-disable_all_foxtrick_modules_ask=Biztosan kikapcsolod az összes modult?
+prefs.delete_foxtrick_branches_ask=Biztosan visszaállítod az alapértelmezett beállításokat?
+prefs.disable_all_foxtrick_modules_ask=Biztosan kikapcsolod az összes modult?
 
-foxtrick.prefs.AdditionalOptions=További beállítási lehetőségek
-foxtrick.prefs.smallcopyicons=A másolás ikonok megjelenítése a fejlécben az oldalsáv helyett
-foxtrick.prefs.DisplayHTMLDebugOutput=További hibamentesítő kimenetet jelenít meg a Hattrick oldalainak alján (fejlesztőknek)
+prefs.additional.title=További beállítási lehetőségek
+prefs.additional.smallCopyIcons=A másolás ikonok megjelenítése a fejlécben az oldalsáv helyett
+prefs.additional.HTMLDebugLog=További hibamentesítő kimenetet jelenít meg a Hattrick oldalainak alján (fejlesztőknek)
 
-foxtrick.prefs.permissionsHint=A következőnek\: %s engedélyre van szüksége a működéshez. Engedélyezd a hozzáférést a következő dialógusban. Ha elutasítod, akkor ennek a modulnak a funkcionalitása le lesz tiltva.
+prefs.permissionsHint=A következőnek\: %s engedélyre van szüksége a működéshez. Engedélyezd a hozzáférést a következő dialógusban. Ha elutasítod, akkor ennek a modulnak a funkcionalitása le lesz tiltva.
 
 ###EOF
