--- a/content/locale/ka/foxtrick.properties
+++ b/content/locale/ka/foxtrick.properties
@@ -584,6 +584,6 @@ status.unknown.abbr=?
 
 
 
-foxtrick.prefs.permissionsHint=%s სჭირდება თქვენი ნებართვა სამუშაოდ. მიეცით მას ნებართვა შემდეგ დიალოგში. თუ არ დაეთანხმებით ამ მოდულს, მაშინ იგი გაუქმდება.
+prefs.permissionsHint=%s სჭირდება თქვენი ნებართვა სამუშაოდ. მიეცით მას ნებართვა შემდეგ დიალოგში. თუ არ დაეთანხმებით ამ მოდულს, მაშინ იგი გაუქმდება.
 
 ###EOF
