--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -1108,9 +1108,9 @@ exception.error=에러 %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=폭스트릭
+toolbar.title=폭스트릭
 preferences=환경설정
-foxtrick.prefs.preferences=폭스트릭 환경설정
+prefs.title=폭스트릭 환경설정
 foxtrick.log.header=폭스트릭 로그
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -1119,7 +1119,7 @@ status.active=활성화
 status.enabled=활성화되었습니다. 하지만 %s은 활성화되지 않았습니다.
 status.disabled=비활성화
 
-prefs.screenshot=스크린샷
+module.screenshot=스크린샷
 
 # tabs in preferences page
 #tabs
@@ -1137,36 +1137,36 @@ tab.about=알아보기
 tab.changes=변경사항
 tab.help=도움말
 
-foxtrick.prefs.setup=설정
-foxtrick.prefs.setup.desc=폭스트릭이 감지한 설정입니다. 올바르지 않으면 {신고 해주세요}.
-foxtrick.prefs.setup.locale=지역
-foxtrick.prefs.setup.dateFormat=날짜 양식
-foxtrick.prefs.setup.country=국가
+prefs.setup=설정
+prefs.setup.desc=폭스트릭이 감지한 설정입니다. 올바르지 않으면 {신고 해주세요}.
+prefs.setup.locale=지역
+prefs.setup.dateFormat=날짜 양식
+prefs.setup.country=국가
 
-foxtrick.prefs.captionCleanupBranch=환경설정 저장
-foxtrick.prefs.captionLoadSavePrefs=환경설정 내보내기 또는 가져오기
-foxtrick.prefs.labelCleanupBranch=기본 환경설정 복구(개인 설정이 아닌 환경설정만.)
-foxtrick.prefs.oauth.delete=선택된 팀의 OAuth 토큰/보안코드 삭제.
+prefs.storedData.title=환경설정 저장
+prefs.loadSave.title=환경설정 내보내기 또는 가져오기
+prefs.storedData.restoreDefault=기본 환경설정 복구(개인 설정이 아닌 환경설정만.)
+prefs.storedData.oauth.delete=선택된 팀의 OAuth 토큰/보안코드 삭제.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=현재 브라우저에만 적용. 전체적으로 폭스트릭의 접근을 거부하기 위해서는 Hattrick의 {CHPP 제품 관리}을 사용하세요.
-foxtrick.prefs.labelDisableAll=모든 모듈 비활성화
-foxtrick.prefs.labelRevokePermissions=모든 옵션의 허가를 거부 (Chrome만)
-foxtrick.prefs.labelSavePrefs=환경설정과 개인 설정 내보내기
-foxtrick.prefs.labelSavePrefs_Prefs=환경설정
-foxtrick.prefs.labelSavePrefs_Notes=개인 설정(템플릿, 사용자 링크, 이적 필터)
-foxtrick.prefs.labelSavePrefs_Token=OAuth 토큰/보안코드
-foxtrick.prefs.saveNotice=텍스트 상자의 문장을 복사하고 파일로 저장하세요. 나중에 그 환경설정을 가져오실 수 있습니다.
-foxtrick.prefs.labelLoadPrefs=환경설정 가져오기(현재 환경설정을 덮어씌웁니다)
-foxtrick.prefs.loadNotice=당신의 저장된 환경설정을 텍스트 상자에 붙여 넣고 환경설정을 가져오기 위해 "가져오기"를 누르세요.
-foxtrick.prefs.captionDisableSettings=폭스트릭 비활성화
-foxtrick.prefs.stagepref=Stage 서버 비활성화
-foxtrick.prefs.disableTemporaryLabel=임시 비활성화
-foxtrick.prefs.featureHighlight=폭스트릭 기능 강조
-foxtrick.prefs.saved=환경설정 저장\!
-foxtrick.prefs.loaded=환경설정 불러오기\!
-foxtrick.prefs.dismissNotice=(현재 공지사항을 없애려면 클릭)
+prefs.storedData.oauth.delete.desc=현재 브라우저에만 적용. 전체적으로 폭스트릭의 접근을 거부하기 위해서는 Hattrick의 {CHPP 제품 관리}을 사용하세요.
+prefs.storedData.disableAll=모든 모듈 비활성화
+prefs.storedData.revokePermissions=모든 옵션의 허가를 거부 (Chrome만)
+prefs.loadSave.export=환경설정과 개인 설정 내보내기
+prefs.loadSave.export.prefs=환경설정
+prefs.loadSave.export.notes=개인 설정(템플릿, 사용자 링크, 이적 필터)
+prefs.loadSave.export.token=OAuth 토큰/보안코드
+prefs.loadSave.export.notice=텍스트 상자의 문장을 복사하고 파일로 저장하세요. 나중에 그 환경설정을 가져오실 수 있습니다.
+prefs.loadSave.import=환경설정 가져오기(현재 환경설정을 덮어씌웁니다)
+prefs.loadSave.import.notice=당신의 저장된 환경설정을 텍스트 상자에 붙여 넣고 환경설정을 가져오기 위해 "가져오기"를 누르세요.
+prefs.disable.title=폭스트릭 비활성화
+prefs.disable.stage=Stage 서버 비활성화
+prefs.disable.temporary=임시 비활성화
+prefs.additional.featureHighlight=폭스트릭 기능 강조
+prefs.feedback.saved=환경설정 저장\!
+prefs.feedback.loaded=환경설정 불러오기\!
+prefs.feedback.dismiss=(현재 공지사항을 없애려면 클릭)
 
-pref.xmlLoad=Hattrick으로부터 추가 정보를 위한 XML 불러오기
+prefs.additional.xmlLoad=Hattrick으로부터 추가 정보를 위한 XML 불러오기
 
 link.title=링크
 link.homepage=홈페이지
@@ -1181,9 +1181,9 @@ link.recentChanges=최근 변경사항
 
 module.link=당신은 현재 토론장에서 직접 여기에 이 링크를 복사 붙여넣기할 수 있습니다.
 
-foxtrick.showReleaseNotes=모든 업데이트 후에 배포 노트 표시
-foxtrick.versionReleaseNotes=배포 노트 보기\:
-foxtrick.Version=버전\:
+releaseNotes.show=모든 업데이트 후에 배포 노트 표시
+releaseNotes.showFor=배포 노트 보기\:
+releaseNotes.version=버전\:
 
 about.copyright=저작권
 about.maintainers=유지보수자
@@ -1194,16 +1194,16 @@ about.designers=디자이너
 prefs.view.by.category=카테고리별로 보기
 prefs.view.by.page=최근 HT 페이지로 보기
 
-delete_foxtrick_branches_ask=당신은 기본 설정으로 복원 하시겠습니까?
-delete_oauth_ask=teamid %s의 OAuth 토큰/보안코드를 삭제합니까?
-disable_all_foxtrick_modules_ask=당신은 모든 모듈을 비활성화하길 원합니까?
-revoke_permissions_ask=당신은 모든 옵션의 권한을 허가하길 원합니까?
+prefs.delete_foxtrick_branches_ask=당신은 기본 설정으로 복원 하시겠습니까?
+prefs.delete_oauth_ask=teamid %s의 OAuth 토큰/보안코드를 삭제합니까?
+prefs.disable_all_foxtrick_modules_ask=당신은 모든 모듈을 비활성화하길 원합니까?
+prefs.revoke_permissions_ask=당신은 모든 옵션의 권한을 허가하길 원합니까?
 
-foxtrick.prefs.AdditionalOptions=일반 옵션
-foxtrick.prefs.smallcopyicons=사이드바 대신에 상단에 복사 아이콘 보이기
-foxtrick.prefs.anstoss2icons=특수능력을 대하여 Anstoss2 아이콘 사용
-foxtrick.prefs.DisplayHTMLDebugOutput=페이지 하단에 폭스트릭 로그 보이기(디버깅을 위해)
+prefs.additional.title=일반 옵션
+prefs.additional.smallCopyIcons=사이드바 대신에 상단에 복사 아이콘 보이기
+prefs.additional.anstoss2Icons=특수능력을 대하여 Anstoss2 아이콘 사용
+prefs.additional.HTMLDebugLog=페이지 하단에 폭스트릭 로그 보이기(디버깅을 위해)
 
-foxtrick.prefs.permissionsHint=%s은 허가가 필요합니다. 다음 대화상자에서 접근을 허용합니다.
+prefs.permissionsHint=%s은 허가가 필요합니다. 다음 대화상자에서 접근을 허용합니다.
 
 ###EOF
