--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1102,9 +1102,9 @@ exception.error=Klaida %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Nustatymai
-foxtrick.prefs.preferences=FoxTrick nustatymai
+prefs.title=FoxTrick nustatymai
 foxtrick.log.header=FoxTrick žurnalas
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -1113,7 +1113,7 @@ status.active=aktyvus
 status.enabled=įjungtas, bet neaktyvus %s
 status.disabled=išjungtas
 
-prefs.screenshot=Momentinė ekrano nuotrauka
+module.screenshot=Momentinė ekrano nuotrauka
 
 # tabs in preferences page
 #tabs
@@ -1131,35 +1131,35 @@ tab.about=Apie
 tab.changes=Šioje versijoje...
 tab.help=Pagalba
 
-foxtrick.prefs.setup=Sąranka
-foxtrick.prefs.setup.desc=FoxTrick automatiškai aptiko šiuos nustatymus. {Prašome pranešti}, jei jie yra neteisingi.
-foxtrick.prefs.setup.locale=Kalba
-foxtrick.prefs.setup.dateFormat=Datos formatas
-foxtrick.prefs.setup.country=Šalis
+prefs.setup=Sąranka
+prefs.setup.desc=FoxTrick automatiškai aptiko šiuos nustatymus. {Prašome pranešti}, jei jie yra neteisingi.
+prefs.setup.locale=Kalba
+prefs.setup.dateFormat=Datos formatas
+prefs.setup.country=Šalis
 
-foxtrick.prefs.captionCleanupBranch=Išsaugoti nustatymai
-foxtrick.prefs.captionLoadSavePrefs=Eksportuoti arba įkelti nustatymus
-foxtrick.prefs.labelCleanupBranch=Atstatyti pradinius Foxtrick nustatymus (asmeniniai duomenys lieka)
-foxtrick.prefs.oauth.delete=Panaikinti CHPP prieigą pasirinktai komandai.
+prefs.storedData.title=Išsaugoti nustatymai
+prefs.loadSave.title=Eksportuoti arba įkelti nustatymus
+prefs.storedData.restoreDefault=Atstatyti pradinius Foxtrick nustatymus (asmeniniai duomenys lieka)
+prefs.storedData.oauth.delete=Panaikinti CHPP prieigą pasirinktai komandai.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Galioja tik šiai naršyklei. Jei norite visiškai panaikinti leidimą Foxtrick pasiekti Jūsų komandos duomenis, tai galite padaryti Hattrick puslapyje „{CHPP produktų valdymas}“.
-foxtrick.prefs.labelDisableAll=Išjungti visus Foxtrick modulius
-foxtrick.prefs.labelRevokePermissions=Panaikinti visus papildomus leidimus (tik „Chrome“ naršyklei)
-foxtrick.prefs.labelSavePrefs=Eksportuoti nustatymus ir (ar) asmeninius duomenis
-foxtrick.prefs.labelSavePrefs_Prefs=Nustatymai
-foxtrick.prefs.labelSavePrefs_Notes=Asmeniniai duomenys (šablonai, nuorodos ir sandorių paieškos filtrai)
-foxtrick.prefs.labelSavePrefs_Token=CHPP prisijungimo duomenys
-foxtrick.prefs.saveNotice=Nukopijuokite teksto lauko turinį ir išsaugokite rinkmenoje, kad ateityje galėtumėte nustatymus įkelti atgal.
-foxtrick.prefs.labelLoadPrefs=Įkelti nustatymus (dabartiniai nustatymai perrašomi).
-foxtrick.prefs.loadNotice=Įterpkite išsaugotus nustatymus teksto lauke ir paspauskite „Įkelti“.
-foxtrick.prefs.captionDisableSettings=Išjungti FoxTrick
-foxtrick.prefs.stagepref=Išjungti Foxtrick Stage serveryje
-foxtrick.prefs.disableTemporaryLabel=Laikinai išjungti Foxtrick
-foxtrick.prefs.saved=Nustatymai išsaugoti\!
-foxtrick.prefs.loaded=Nustatymai įkelti\!
-foxtrick.prefs.dismissNotice=(spustelėkite pranešimui uždaryti)
+prefs.storedData.oauth.delete.desc=Galioja tik šiai naršyklei. Jei norite visiškai panaikinti leidimą Foxtrick pasiekti Jūsų komandos duomenis, tai galite padaryti Hattrick puslapyje „{CHPP produktų valdymas}“.
+prefs.storedData.disableAll=Išjungti visus Foxtrick modulius
+prefs.storedData.revokePermissions=Panaikinti visus papildomus leidimus (tik „Chrome“ naršyklei)
+prefs.loadSave.export=Eksportuoti nustatymus ir (ar) asmeninius duomenis
+prefs.loadSave.export.prefs=Nustatymai
+prefs.loadSave.export.notes=Asmeniniai duomenys (šablonai, nuorodos ir sandorių paieškos filtrai)
+prefs.loadSave.export.token=CHPP prisijungimo duomenys
+prefs.loadSave.export.notice=Nukopijuokite teksto lauko turinį ir išsaugokite rinkmenoje, kad ateityje galėtumėte nustatymus įkelti atgal.
+prefs.loadSave.import=Įkelti nustatymus (dabartiniai nustatymai perrašomi).
+prefs.loadSave.import.notice=Įterpkite išsaugotus nustatymus teksto lauke ir paspauskite „Įkelti“.
+prefs.disable.title=Išjungti FoxTrick
+prefs.disable.stage=Išjungti Foxtrick Stage serveryje
+prefs.disable.temporary=Laikinai išjungti Foxtrick
+prefs.feedback.saved=Nustatymai išsaugoti\!
+prefs.feedback.loaded=Nustatymai įkelti\!
+prefs.feedback.dismiss=(spustelėkite pranešimui uždaryti)
 
-pref.xmlLoad=Parsisiųsti daugiau informacijos CHPP sąsaja
+prefs.additional.xmlLoad=Parsisiųsti daugiau informacijos CHPP sąsaja
 
 link.title=Nuorodos
 link.homepage=Foxtrick tinklalapis
@@ -1174,8 +1174,8 @@ link.recentChanges=Pakeitimų sąrašas
 
 module.link=Galite į forumą nukopijuoti tiesiogiai čia vedančią nuorodą
 
-foxtrick.showReleaseNotes=Rodyti versijos informaciją po kiekvieno atnaujinimo
-foxtrick.versionReleaseNotes=Rodyti versijos informaciją\:
+releaseNotes.show=Rodyti versijos informaciją po kiekvieno atnaujinimo
+releaseNotes.showFor=Rodyti versijos informaciją\:
 
 about.copyright=Autorių teisės
 about.maintainers=Projekto valdytojai
@@ -1186,15 +1186,15 @@ about.designers=Stilistai
 prefs.view.by.category=Rodyti funkcijų kategorijas
 prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
 
-delete_foxtrick_branches_ask=Ar tikrai norite atstatyti pradinius nustatymus?
-delete_oauth_ask=Panaikinti CHPP prieigą (komandos ID\: %s)?
-disable_all_foxtrick_modules_ask=Ar tikrai norite išjungti visus patobulinimus?
-revoke_permissions_ask=Ar tikrai norite panaikinti visus papildomus leidimus?
+prefs.delete_foxtrick_branches_ask=Ar tikrai norite atstatyti pradinius nustatymus?
+prefs.delete_oauth_ask=Panaikinti CHPP prieigą (komandos ID\: %s)?
+prefs.disable_all_foxtrick_modules_ask=Ar tikrai norite išjungti visus patobulinimus?
+prefs.revoke_permissions_ask=Ar tikrai norite panaikinti visus papildomus leidimus?
 
-foxtrick.prefs.AdditionalOptions=Bendri nustatymai
-foxtrick.prefs.smallcopyicons=Rodyti kopijavimo ikonas antraštėje, o ne paraštėje
-foxtrick.prefs.DisplayHTMLDebugOutput=Rodyti FoxTrick veiklos žurnalą puslapių apačioje (programuotojams)
+prefs.additional.title=Bendri nustatymai
+prefs.additional.smallCopyIcons=Rodyti kopijavimo ikonas antraštėje, o ne paraštėje
+prefs.additional.HTMLDebugLog=Rodyti FoxTrick veiklos žurnalą puslapių apačioje (programuotojams)
 
-foxtrick.prefs.permissionsHint=%s darbui reikia papildomo leidimo. Suteikite leidimą pasirodysiančiame lange.
+prefs.permissionsHint=%s darbui reikia papildomo leidimo. Suteikite leidimą pasirodysiančiame lange.
 
 ###EOF
