--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -731,7 +731,7 @@ api.serverUnavailable=Serveris nav pieejams
 # Captions and labels of foxtrick preferences
 
 preferences=Uzstādījumi
-foxtrick.prefs.preferences=FoxTrick uzstādījumi
+prefs.title=FoxTrick uzstādījumi
 # keep the following line untranslated
 
 status.active=aktīvs
@@ -746,15 +746,15 @@ tab.links=Saites
 tab.changes=Izmaiņas
 tab.help=Palīdzība
 
-foxtrick.prefs.setup=Uzstādījumi
-foxtrick.prefs.setup.dateFormat=Datuma formāts
-foxtrick.prefs.setup.country=Valsts
+prefs.setup=Uzstādījumi
+prefs.setup.dateFormat=Datuma formāts
+prefs.setup.country=Valsts
 
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelSavePrefs_Prefs=Uzstādījumi
-foxtrick.prefs.captionDisableSettings=Izslēgt FoxTrick
-foxtrick.prefs.saved=Uzstādījumi saglabāti\!
-foxtrick.prefs.dismissNotice=(Noklikšķiniet, lai noraidītu šo paziņojumu)
+prefs.loadSave.export.prefs=Uzstādījumi
+prefs.disable.title=Izslēgt FoxTrick
+prefs.feedback.saved=Uzstādījumi saglabāti\!
+prefs.feedback.dismiss=(Noklikšķiniet, lai noraidītu šo paziņojumu)
 
 
 link.title=Saites
@@ -773,7 +773,7 @@ prefs.view.by.category=Atlasīt pēc kategorijas
 prefs.view.by.page=Atlasīt pēc pēdējās HT lapas
 
 
-foxtrick.prefs.AdditionalOptions=Galvenās opcijas
+prefs.additional.title=Galvenās opcijas
 
 
 ###EOF
