--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -673,9 +673,9 @@ button.disableAll=Itfi kollox
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Preferenzi
-foxtrick.prefs.preferences=Preferenzi ta' Foxtrick
+prefs.title=Preferenzi ta' Foxtrick
 # keep the following line untranslated
 
 
@@ -692,22 +692,22 @@ tab.about=Dwar
 tab.changes=Tibdil
 tab.help=Għajnuna
 
-foxtrick.prefs.setup.locale=Lingwa
-foxtrick.prefs.setup.dateFormat=Format tad-data
-foxtrick.prefs.setup.country=Pajjiż
+prefs.setup.locale=Lingwa
+prefs.setup.dateFormat=Format tad-data
+prefs.setup.country=Pajjiż
 
-foxtrick.prefs.captionCleanupBranch=Preferenzi storjati
-foxtrick.prefs.captionLoadSavePrefs=Esporta jew importa l-preferenzi
-foxtrick.prefs.labelCleanupBranch=Tella' settings default ta' Foxtrick (preferenzi biss, mhux settings personali. Ikollok bżonn tagħlaq u terġa' tiftaħ)
+prefs.storedData.title=Preferenzi storjati
+prefs.loadSave.title=Esporta jew importa l-preferenzi
+prefs.storedData.restoreDefault=Tella' settings default ta' Foxtrick (preferenzi biss, mhux settings personali. Ikollok bżonn tagħlaq u terġa' tiftaħ)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Itfi l-moduli kollha ta' Foxtrick
-foxtrick.prefs.labelSavePrefs=Esporta l-preferenzi ta' Foxtrick u s-settings personali
-foxtrick.prefs.labelSavePrefs_Prefs=Esporta l-preferenzi ta' Foxtrick
-foxtrick.prefs.labelSavePrefs_Notes=Esporta s-settings personali (noti, templates & links personali)
-foxtrick.prefs.labelLoadPrefs=Importa l-preferenzi ta' Foxtrick (jistgħu jinkitbu fuq is-settings kurrenti. Ikollok bżonn tagħlaq u terġa' tiftaħ)
-foxtrick.prefs.captionDisableSettings=Itfi Foxtrick
-foxtrick.prefs.stagepref=Itfi Foxtrick minn fuq is-server Stage
-foxtrick.prefs.disableTemporaryLabel=Itfi Foxtrick temporanjament
+prefs.storedData.disableAll=Itfi l-moduli kollha ta' Foxtrick
+prefs.loadSave.export=Esporta l-preferenzi ta' Foxtrick u s-settings personali
+prefs.loadSave.export.prefs=Esporta l-preferenzi ta' Foxtrick
+prefs.loadSave.export.notes=Esporta s-settings personali (noti, templates & links personali)
+prefs.loadSave.import=Importa l-preferenzi ta' Foxtrick (jistgħu jinkitbu fuq is-settings kurrenti. Ikollok bżonn tagħlaq u terġa' tiftaħ)
+prefs.disable.title=Itfi Foxtrick
+prefs.disable.stage=Itfi Foxtrick minn fuq is-server Stage
+prefs.disable.temporary=Itfi Foxtrick temporanjament
 
 
 
@@ -715,12 +715,12 @@ foxtrick.prefs.disableTemporaryLabel=Itfi Foxtrick temporanjament
 
 
 
-delete_foxtrick_branches_ask=Ċert li trid terġa' ittella' s-settings default?\nFirefox irid jingħalaq u jerġa' jinfetaħ biex dan isir\!
-disable_all_foxtrick_modules_ask=Ċert li trid titfi l-moduli kollha?\n
+prefs.delete_foxtrick_branches_ask=Ċert li trid terġa' ittella' s-settings default?\nFirefox irid jingħalaq u jerġa' jinfetaħ biex dan isir\!
+prefs.disable_all_foxtrick_modules_ask=Ċert li trid titfi l-moduli kollha?\n
 
-foxtrick.prefs.AdditionalOptions=Ġħażliet addizzjonali
-foxtrick.prefs.smallcopyicons=Simboli żgħar fil-header minflok kaxxa separata fil-ġenb
-foxtrick.prefs.DisplayHTMLDebugOutput=Uri r-rapport addizzjonali debug fuq il-paġna ta' Hattrick (għall-iżviluppaturi)
+prefs.additional.title=Ġħażliet addizzjonali
+prefs.additional.smallCopyIcons=Simboli żgħar fil-header minflok kaxxa separata fil-ġenb
+prefs.additional.HTMLDebugLog=Uri r-rapport addizzjonali debug fuq il-paġna ta' Hattrick (għall-iżviluppaturi)
 
 
 ###EOF
