--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -773,9 +773,9 @@ button.disableAll=Deaktiver alle
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Innstillingar
-foxtrick.prefs.preferences=FoxTrick-innstillingar
+prefs.title=FoxTrick-innstillingar
 # keep the following line untranslated
 
 status.active=aktivert
@@ -796,22 +796,22 @@ tab.about=Om Foxtrick
 tab.changes=Endringar
 tab.help=Hjelp
 
-foxtrick.prefs.setup.locale=Språk
-foxtrick.prefs.setup.dateFormat=Dateoformat
-foxtrick.prefs.setup.country=Land
+prefs.setup.locale=Språk
+prefs.setup.dateFormat=Dateoformat
+prefs.setup.country=Land
 
-foxtrick.prefs.captionCleanupBranch=Lagra innstillingar
-foxtrick.prefs.captionLoadSavePrefs=Eksporter eller importer innstillingar
-foxtrick.prefs.labelCleanupBranch=Attendestill innstillingar (berre innstillingar, sett vekk i frå dei personlege innstillingane. Krevjer omstart.)
+prefs.storedData.title=Lagra innstillingar
+prefs.loadSave.title=Eksporter eller importer innstillingar
+prefs.storedData.restoreDefault=Attendestill innstillingar (berre innstillingar, sett vekk i frå dei personlege innstillingane. Krevjer omstart.)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Slå av alle modular
-foxtrick.prefs.labelSavePrefs=Eksporter innstillingar
-foxtrick.prefs.labelSavePrefs_Prefs=Innstillingar
-foxtrick.prefs.labelSavePrefs_Notes=Personlege innstillingar (Notat, tema & snarvegar)
-foxtrick.prefs.labelLoadPrefs=Importer innstillingar (Noverande innstillingar kan verte overskriven. Krevjer omstart.)
-foxtrick.prefs.captionDisableSettings=Deaktiver FoxTrick
-foxtrick.prefs.stagepref=Slå av på Stage-serveren
-foxtrick.prefs.disableTemporaryLabel=Slå av mellombels
+prefs.storedData.disableAll=Slå av alle modular
+prefs.loadSave.export=Eksporter innstillingar
+prefs.loadSave.export.prefs=Innstillingar
+prefs.loadSave.export.notes=Personlege innstillingar (Notat, tema & snarvegar)
+prefs.loadSave.import=Importer innstillingar (Noverande innstillingar kan verte overskriven. Krevjer omstart.)
+prefs.disable.title=Deaktiver FoxTrick
+prefs.disable.stage=Slå av på Stage-serveren
+prefs.disable.temporary=Slå av mellombels
 
 
 
@@ -819,12 +819,12 @@ foxtrick.prefs.disableTemporaryLabel=Slå av mellombels
 
 
 
-delete_foxtrick_branches_ask=Ynskjer du verkeleg å attendestille Foxtrick?\nFirefox må verte starta om att for at dette skal verke\!
-disable_all_foxtrick_modules_ask=Ynskjer du verkeleg å slå av alle modular?\n
+prefs.delete_foxtrick_branches_ask=Ynskjer du verkeleg å attendestille Foxtrick?\nFirefox må verte starta om att for at dette skal verke\!
+prefs.disable_all_foxtrick_modules_ask=Ynskjer du verkeleg å slå av alle modular?\n
 
-foxtrick.prefs.AdditionalOptions=Tilleggsalternativ
-foxtrick.prefs.smallcopyicons=Vis ikona i header istadenfor på sida
-foxtrick.prefs.DisplayHTMLDebugOutput=Vis ein eigen debuggar-informasjon på Hattrick-sida (for utviklarar)
+prefs.additional.title=Tilleggsalternativ
+prefs.additional.smallCopyIcons=Vis ikona i header istadenfor på sida
+prefs.additional.HTMLDebugLog=Vis ein eigen debuggar-informasjon på Hattrick-sida (for utviklarar)
 
 
 ###EOF
