--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -755,9 +755,9 @@ button.disableAll=Wyłącz
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Ustawienia
-foxtrick.prefs.preferences=Ustawienia FoxTrick'a
+prefs.title=Ustawienia FoxTrick'a
 # keep the following line untranslated
 
 status.active=aktywny
@@ -778,22 +778,22 @@ tab.about=O FoxTricku
 tab.changes=Zmiany
 tab.help=Pomoc
 
-foxtrick.prefs.setup.locale=Język
-foxtrick.prefs.setup.dateFormat=Format daty
-foxtrick.prefs.setup.country=Kraj
+prefs.setup.locale=Język
+prefs.setup.dateFormat=Format daty
+prefs.setup.country=Kraj
 
-foxtrick.prefs.captionCleanupBranch=Ustawienia domyślne
-foxtrick.prefs.captionLoadSavePrefs=Eksport/Import zapisanych ustawień
-foxtrick.prefs.labelCleanupBranch=Przywróć ustawienia domyślne FoxTricka (wymagany restart)
+prefs.storedData.title=Ustawienia domyślne
+prefs.loadSave.title=Eksport/Import zapisanych ustawień
+prefs.storedData.restoreDefault=Przywróć ustawienia domyślne FoxTricka (wymagany restart)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Wyłącz wszystkie moduły FoxTricka
-foxtrick.prefs.labelSavePrefs=Eksportuj wszystko
-foxtrick.prefs.labelSavePrefs_Prefs=Eksportuj tylko ustawienia
-foxtrick.prefs.labelSavePrefs_Notes=Eksportuj tylko własne ustawienia (notatki, szablony, własne linki)
-foxtrick.prefs.labelLoadPrefs=Importuj ustawienia (obecne ustawienia mogą zostać nadpisane, wymagany restart)
-foxtrick.prefs.captionDisableSettings=Wyłącz FoxTrick
-foxtrick.prefs.stagepref=Wyłącz FoxTricka na Stage'u (wymagany restart Firefoxa)
-foxtrick.prefs.disableTemporaryLabel=Wyłącz FoxTricka czasowo
+prefs.storedData.disableAll=Wyłącz wszystkie moduły FoxTricka
+prefs.loadSave.export=Eksportuj wszystko
+prefs.loadSave.export.prefs=Eksportuj tylko ustawienia
+prefs.loadSave.export.notes=Eksportuj tylko własne ustawienia (notatki, szablony, własne linki)
+prefs.loadSave.import=Importuj ustawienia (obecne ustawienia mogą zostać nadpisane, wymagany restart)
+prefs.disable.title=Wyłącz FoxTrick
+prefs.disable.stage=Wyłącz FoxTricka na Stage'u (wymagany restart Firefoxa)
+prefs.disable.temporary=Wyłącz FoxTricka czasowo
 
 
 
@@ -801,12 +801,12 @@ foxtrick.prefs.disableTemporaryLabel=Wyłącz FoxTricka czasowo
 
 
 
-delete_foxtrick_branches_ask=Czy na pewno chcesz przywrócić domyślne ustawienia FoxTricka?\nJeśli tak, zrestartuj później Firefoxa\!
-disable_all_foxtrick_modules_ask=Czy na pewno chcesz wyłączyć wszystkie moduły?\n
+prefs.delete_foxtrick_branches_ask=Czy na pewno chcesz przywrócić domyślne ustawienia FoxTricka?\nJeśli tak, zrestartuj później Firefoxa\!
+prefs.disable_all_foxtrick_modules_ask=Czy na pewno chcesz wyłączyć wszystkie moduły?\n
 
-foxtrick.prefs.AdditionalOptions=Opcje dodatkowe
-foxtrick.prefs.smallcopyicons=Używaj małych ikonek do kopiowania zamiast odobnego boxa
-foxtrick.prefs.DisplayHTMLDebugOutput=Pokazuj debug na stronie Hattricka (dla twórców)
+prefs.additional.title=Opcje dodatkowe
+prefs.additional.smallCopyIcons=Używaj małych ikonek do kopiowania zamiast odobnego boxa
+prefs.additional.HTMLDebugLog=Pokazuj debug na stronie Hattricka (dla twórców)
 
 
 ###EOF
