--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -840,9 +840,9 @@ exception.error=Erro %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Preferências
-foxtrick.prefs.preferences=Preferências
+prefs.title=Preferências
 foxtrick.log.header=FoxTrick Log
 # keep the following line untranslated
 
@@ -862,27 +862,27 @@ tab.about=Sobre
 tab.changes=Mudanças
 tab.help=Ajuda
 
-foxtrick.prefs.setup=Instalação
-foxtrick.prefs.setup.desc=Estas são as configurações que FoxTrick detectado. Se estiverem incorretos, {relate}.
-foxtrick.prefs.setup.locale=Definições de Linguagem
-foxtrick.prefs.setup.dateFormat=Definições de formato de data
-foxtrick.prefs.setup.country=Definições do país
+prefs.setup=Instalação
+prefs.setup.desc=Estas são as configurações que FoxTrick detectado. Se estiverem incorretos, {relate}.
+prefs.setup.locale=Definições de Linguagem
+prefs.setup.dateFormat=Definições de formato de data
+prefs.setup.country=Definições do país
 
-foxtrick.prefs.captionCleanupBranch=Preferências guardadas
-foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferências
-foxtrick.prefs.labelCleanupBranch=Restaurar definições padrão do Foxtrick. (requer reínicio)
-foxtrick.prefs.oauth.delete=Exclua OAuth símbolo/segredo para a equipe selecionada.
+prefs.storedData.title=Preferências guardadas
+prefs.loadSave.title=Exportar ou importar preferências
+prefs.storedData.restoreDefault=Restaurar definições padrão do Foxtrick. (requer reínicio)
+prefs.storedData.oauth.delete=Exclua OAuth símbolo/segredo para a equipe selecionada.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Desactivas todos os módulos do Foxtrick
-foxtrick.prefs.labelSavePrefs=Exportar preferências Foxtrick
-foxtrick.prefs.labelSavePrefs_Prefs=Exportar as definições do Foxtrick
-foxtrick.prefs.labelSavePrefs_Notes=Exportar as suas definições pessoais (notas, templates & custom links)
-foxtrick.prefs.labelLoadPrefs=Importar preferências foxtrick. (As actuais poderão ser sobrepostas. Requer reínicio)
-foxtrick.prefs.captionDisableSettings=Desactivar Foxtrick.
-foxtrick.prefs.stagepref=Desactivar FoxTrick no servidor do Stage
-foxtrick.prefs.disableTemporaryLabel=Desactivar momentaneamente o Foxtrick
-foxtrick.prefs.saved=Preferências salvas\!
-foxtrick.prefs.loaded=Preferências carregado\!
+prefs.storedData.disableAll=Desactivas todos os módulos do Foxtrick
+prefs.loadSave.export=Exportar preferências Foxtrick
+prefs.loadSave.export.prefs=Exportar as definições do Foxtrick
+prefs.loadSave.export.notes=Exportar as suas definições pessoais (notas, templates & custom links)
+prefs.loadSave.import=Importar preferências foxtrick. (As actuais poderão ser sobrepostas. Requer reínicio)
+prefs.disable.title=Desactivar Foxtrick.
+prefs.disable.stage=Desactivar FoxTrick no servidor do Stage
+prefs.disable.temporary=Desactivar momentaneamente o Foxtrick
+prefs.feedback.saved=Preferências salvas\!
+prefs.feedback.loaded=Preferências carregado\!
 
 
 link.title=Ligações
@@ -902,10 +902,10 @@ about.translators=Tradutores
 
 prefs.view.by.page=Exibir última página HT
 
-delete_foxtrick_branches_ask=Tens a certeza que queres restaurar as opções padrão?\nO Firefox deve ser reiniciado para esta acção ter efeito\!
-disable_all_foxtrick_modules_ask=Tens a certeza que queres desactivar todos os módulos?\n
+prefs.delete_foxtrick_branches_ask=Tens a certeza que queres restaurar as opções padrão?\nO Firefox deve ser reiniciado para esta acção ter efeito\!
+prefs.disable_all_foxtrick_modules_ask=Tens a certeza que queres desactivar todos os módulos?\n
 
-foxtrick.prefs.AdditionalOptions=Opções gerais
+prefs.additional.title=Opções gerais
 
 
 ###EOF
