--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -1101,9 +1101,9 @@ exception.error=Error %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Preferinte
-foxtrick.prefs.preferences=Preferinte FoxTrick
+prefs.title=Preferinte FoxTrick
 foxtrick.log.header=FoxTrick Log
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -1112,7 +1112,7 @@ status.active=Activ
 status.enabled=Activat, dar nu este activ in %s
 status.disabled=Dezactivat
 
-prefs.screenshot=Screenshot
+module.screenshot=Screenshot
 
 # tabs in preferences page
 #tabs
@@ -1130,35 +1130,35 @@ tab.about=Despre
 tab.changes=Modificari
 tab.help=Ajutor
 
-foxtrick.prefs.setup=Configurare
-foxtrick.prefs.setup.desc=Acestea sunt setarile pe care FoxTrick le-a detectat. Daca sunt incorecte {va rugam raportati}.
-foxtrick.prefs.setup.locale=Locale
-foxtrick.prefs.setup.dateFormat=Setari format data
-foxtrick.prefs.setup.country=Setari tara
+prefs.setup=Configurare
+prefs.setup.desc=Acestea sunt setarile pe care FoxTrick le-a detectat. Daca sunt incorecte {va rugam raportati}.
+prefs.setup.locale=Locale
+prefs.setup.dateFormat=Setari format data
+prefs.setup.country=Setari tara
 
-foxtrick.prefs.captionCleanupBranch=Preferinte stocate
-foxtrick.prefs.captionLoadSavePrefs=Exporta sau importa preferinte
-foxtrick.prefs.labelCleanupBranch=Restaurare preferinte implicite (doar preferinte, nu setari personale)
-foxtrick.prefs.oauth.delete=Stergeti OAuth token/secret pentru echipa selectata.
+prefs.storedData.title=Preferinte stocate
+prefs.loadSave.title=Exporta sau importa preferinte
+prefs.storedData.restoreDefault=Restaurare preferinte implicite (doar preferinte, nu setari personale)
+prefs.storedData.oauth.delete=Stergeti OAuth token/secret pentru echipa selectata.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Se aplica doar pentru acest navigator. Pentru a inlatura total accesul FoxTrick asupra unei echipe, folositi  {CHPP management} Hattrickului.
-foxtrick.prefs.labelDisableAll=Dezactiveazate toate modulele FoxTrick
-foxtrick.prefs.labelRevokePermissions=Revoca toate permisiunile optionale (doar pentru Chrome)
-foxtrick.prefs.labelSavePrefs=Exporta preferinte si setari personale
-foxtrick.prefs.labelSavePrefs_Prefs=Preferinte
-foxtrick.prefs.labelSavePrefs_Notes=Exporta setari personale (notari, sabloane & linkuri personalizate)
-foxtrick.prefs.labelSavePrefs_Token=OAuth token/secret
-foxtrick.prefs.saveNotice=Copiaza continutul in casuta text si salveaza ca un fisier pentru a putea importa preferintele in viitor.
-foxtrick.prefs.labelLoadPrefs=Importa Import preferinte (Actualele vor fi inlocuite)
-foxtrick.prefs.loadNotice=Lipeste preferintele salvate in casuta text si apasa "Import" pentru a importa preferintele.
-foxtrick.prefs.captionDisableSettings=Dezactiveaza FoxTrick
-foxtrick.prefs.stagepref=Dezactiveaza pe serverul Stage
-foxtrick.prefs.disableTemporaryLabel=Dezactiveaza temporar
-foxtrick.prefs.saved=Preferinte salvate\!
-foxtrick.prefs.loaded=Preferinte incarcate\!
-foxtrick.prefs.dismissNotice=(click pentru a dezaproba notita)
+prefs.storedData.oauth.delete.desc=Se aplica doar pentru acest navigator. Pentru a inlatura total accesul FoxTrick asupra unei echipe, folositi  {CHPP management} Hattrickului.
+prefs.storedData.disableAll=Dezactiveazate toate modulele FoxTrick
+prefs.storedData.revokePermissions=Revoca toate permisiunile optionale (doar pentru Chrome)
+prefs.loadSave.export=Exporta preferinte si setari personale
+prefs.loadSave.export.prefs=Preferinte
+prefs.loadSave.export.notes=Exporta setari personale (notari, sabloane & linkuri personalizate)
+prefs.loadSave.export.token=OAuth token/secret
+prefs.loadSave.export.notice=Copiaza continutul in casuta text si salveaza ca un fisier pentru a putea importa preferintele in viitor.
+prefs.loadSave.import=Importa Import preferinte (Actualele vor fi inlocuite)
+prefs.loadSave.import.notice=Lipeste preferintele salvate in casuta text si apasa "Import" pentru a importa preferintele.
+prefs.disable.title=Dezactiveaza FoxTrick
+prefs.disable.stage=Dezactiveaza pe serverul Stage
+prefs.disable.temporary=Dezactiveaza temporar
+prefs.feedback.saved=Preferinte salvate\!
+prefs.feedback.loaded=Preferinte incarcate\!
+prefs.feedback.dismiss=(click pentru a dezaproba notita)
 
-pref.xmlLoad=Incarca XMLs pentru informatii extra de la Hattrick
+prefs.additional.xmlLoad=Incarca XMLs pentru informatii extra de la Hattrick
 
 link.title=Linkuri
 link.homepage=Pagina de start
@@ -1173,8 +1173,8 @@ link.recentChanges=Schimbari recente
 
 module.link=Poti copia si lipi acest link in forum pentru a te directiona aici.
 
-foxtrick.showReleaseNotes=Arata notele lansarii dupa fiecare update
-foxtrick.versionReleaseNotes=Arata notele lansarii pentru\:
+releaseNotes.show=Arata notele lansarii dupa fiecare update
+releaseNotes.showFor=Arata notele lansarii pentru\:
 
 about.copyright=Copyright
 about.maintainers=Intretinatori
@@ -1185,15 +1185,15 @@ about.designers=Designeri
 prefs.view.by.category=Dupa categorii
 prefs.view.by.page=Dupa ultima pagina HT
 
-delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?
-delete_oauth_ask=Stergere OAuth jeton / secret pentru teamid %s?
-disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
-revoke_permissions_ask=Esti sigur ca vrei sa revoci toate permisiunile optionale?
+prefs.delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?
+prefs.delete_oauth_ask=Stergere OAuth jeton / secret pentru teamid %s?
+prefs.disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
+prefs.revoke_permissions_ask=Esti sigur ca vrei sa revoci toate permisiunile optionale?
 
-foxtrick.prefs.AdditionalOptions=Optiuni generale
-foxtrick.prefs.smallcopyicons=Iconite mici de copiat in locul casutei separate
-foxtrick.prefs.DisplayHTMLDebugOutput=Arata log-ul Foxtrick in josul paginii (pentru debugging)
+prefs.additional.title=Optiuni generale
+prefs.additional.smallCopyIcons=Iconite mici de copiat in locul casutei separate
+prefs.additional.HTMLDebugLog=Arata log-ul Foxtrick in josul paginii (pentru debugging)
 
-foxtrick.prefs.permissionsHint=%s are nevoie de permisiunea de a lucra. Se permite accesul in urmatorul dialog.
+prefs.permissionsHint=%s are nevoie de permisiunea de a lucra. Se permite accesul in urmatorul dialog.
 
 ###EOF
