--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -679,9 +679,9 @@ button.disableAll=Zablokovať všetko
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Nastavenia
-foxtrick.prefs.preferences=FoxTrick nastavenia
+prefs.title=FoxTrick nastavenia
 # keep the following line untranslated
 
 
@@ -698,22 +698,22 @@ tab.about=O rozšírení
 tab.changes=Zmeny
 tab.help=Pomoc
 
-foxtrick.prefs.setup.locale=Jazykové nastavenia
-foxtrick.prefs.setup.dateFormat=Nastavenia formátu dátumu
-foxtrick.prefs.setup.country=Nastavenia krajiny
+prefs.setup.locale=Jazykové nastavenia
+prefs.setup.dateFormat=Nastavenia formátu dátumu
+prefs.setup.country=Nastavenia krajiny
 
-foxtrick.prefs.captionCleanupBranch=Nastavenia Foxtricku
-foxtrick.prefs.captionLoadSavePrefs=Exportovať alebo importovať nastavenia
-foxtrick.prefs.labelCleanupBranch=Obnoviť pôvodné nastavenia (iba nastavenia, nie osobné nastavenia. Vyžaduje reštart prehliadača)
+prefs.storedData.title=Nastavenia Foxtricku
+prefs.loadSave.title=Exportovať alebo importovať nastavenia
+prefs.storedData.restoreDefault=Obnoviť pôvodné nastavenia (iba nastavenia, nie osobné nastavenia. Vyžaduje reštart prehliadača)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Vypnúť všetky moduly
-foxtrick.prefs.labelSavePrefs=Exportovať nastavenia a osobné nastavenia
-foxtrick.prefs.labelSavePrefs_Prefs=Exportovať nastavenia
-foxtrick.prefs.labelSavePrefs_Notes=Exportovať osobné nastavenia (poznámky, šablóny a vlastné odkazy)
-foxtrick.prefs.labelLoadPrefs=Importovať nastavenia (Aktuálne nastavenia budú prepísané. Vyžaduje reštart prehliadača)
-foxtrick.prefs.captionDisableSettings=Vypnúť FoxTrick
-foxtrick.prefs.stagepref=Vypnúť foxtrick pre Stage
-foxtrick.prefs.disableTemporaryLabel=Zablokovať dočasne foxtrick
+prefs.storedData.disableAll=Vypnúť všetky moduly
+prefs.loadSave.export=Exportovať nastavenia a osobné nastavenia
+prefs.loadSave.export.prefs=Exportovať nastavenia
+prefs.loadSave.export.notes=Exportovať osobné nastavenia (poznámky, šablóny a vlastné odkazy)
+prefs.loadSave.import=Importovať nastavenia (Aktuálne nastavenia budú prepísané. Vyžaduje reštart prehliadača)
+prefs.disable.title=Vypnúť FoxTrick
+prefs.disable.stage=Vypnúť foxtrick pre Stage
+prefs.disable.temporary=Zablokovať dočasne foxtrick
 
 
 
@@ -721,12 +721,12 @@ foxtrick.prefs.disableTemporaryLabel=Zablokovať dočasne foxtrick
 
 
 
-delete_foxtrick_branches_ask=Určite chceš obnoviť pôvodné nastavenia Foxtricku?\nPre obnovenie musíš reštartovať Firefox\!
-disable_all_foxtrick_modules_ask=Si si istý, že chceš zablokovať všetky moduly?\n
+prefs.delete_foxtrick_branches_ask=Určite chceš obnoviť pôvodné nastavenia Foxtricku?\nPre obnovenie musíš reštartovať Firefox\!
+prefs.disable_all_foxtrick_modules_ask=Si si istý, že chceš zablokovať všetky moduly?\n
 
-foxtrick.prefs.AdditionalOptions=Ďalšie možnosti
-foxtrick.prefs.smallcopyicons=Zobraziť kopírovacie ikony v hlavičke namiesto bočného menu
-foxtrick.prefs.DisplayHTMLDebugOutput=Zobraziť dodatočné ladiace výstupy v pätičke (pre vývojárov)
+prefs.additional.title=Ďalšie možnosti
+prefs.additional.smallCopyIcons=Zobraziť kopírovacie ikony v hlavičke namiesto bočného menu
+prefs.additional.HTMLDebugLog=Zobraziť dodatočné ladiace výstupy v pätičke (pre vývojárov)
 
 
 ###EOF
