--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -544,7 +544,7 @@ button.disableAll=Fik të gjitha
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick.prefs.preferences=Preferencat
+prefs.title=Preferencat
 # keep the following line untranslated
 
 
@@ -561,22 +561,22 @@ tab.about=Rreth
 tab.changes=Ndryshime
 tab.help=Ndihmë
 
-foxtrick.prefs.setup.locale=Zgjedhja e gjuhës
-foxtrick.prefs.setup.dateFormat=Zgjedhjet e formatit të datës
-foxtrick.prefs.setup.country=Zgjedhjet e shtetit
+prefs.setup.locale=Zgjedhja e gjuhës
+prefs.setup.dateFormat=Zgjedhjet e formatit të datës
+prefs.setup.country=Zgjedhjet e shtetit
 
-foxtrick.prefs.captionCleanupBranch=Preferencat e ruajtura
-foxtrick.prefs.captionLoadSavePrefs=Eksporto ose importo preferencat
-foxtrick.prefs.labelCleanupBranch=Rivendos zgjedhjet standarte të FoxTricks (vetëm preferencat, jo zgjedhjet personale. kërkon dalje-hyrje)
+prefs.storedData.title=Preferencat e ruajtura
+prefs.loadSave.title=Eksporto ose importo preferencat
+prefs.storedData.restoreDefault=Rivendos zgjedhjet standarte të FoxTricks (vetëm preferencat, jo zgjedhjet personale. kërkon dalje-hyrje)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Fik të gjithë modulet e FoxTrick
-foxtrick.prefs.labelSavePrefs=Exporto preferencat dhe zgjedhjet personale të FoxTrick
-foxtrick.prefs.labelSavePrefs_Prefs=Exporto preferencat e FoxTrick
-foxtrick.prefs.labelSavePrefs_Notes=Exporto zgjedhjet personale (shënimet, shëmbujt & link të personalizuar)
-foxtrick.prefs.labelLoadPrefs=Importo preferencat e FoxTrick (zgjedhjet e momentit mund të zëvëndësohen. Kërkon dalje-hyrje)
-foxtrick.prefs.captionDisableSettings=Fik FoxTrick
-foxtrick.prefs.stagepref=Fikni FoxTrick te serveri i Stage
-foxtrick.prefs.disableTemporaryLabel=Fikni FoxTrick përkohësisht
+prefs.storedData.disableAll=Fik të gjithë modulet e FoxTrick
+prefs.loadSave.export=Exporto preferencat dhe zgjedhjet personale të FoxTrick
+prefs.loadSave.export.prefs=Exporto preferencat e FoxTrick
+prefs.loadSave.export.notes=Exporto zgjedhjet personale (shënimet, shëmbujt & link të personalizuar)
+prefs.loadSave.import=Importo preferencat e FoxTrick (zgjedhjet e momentit mund të zëvëndësohen. Kërkon dalje-hyrje)
+prefs.disable.title=Fik FoxTrick
+prefs.disable.stage=Fikni FoxTrick te serveri i Stage
+prefs.disable.temporary=Fikni FoxTrick përkohësisht
 
 
 
@@ -584,10 +584,10 @@ foxtrick.prefs.disableTemporaryLabel=Fikni FoxTrick përkohësisht
 
 
 
-delete_foxtrick_branches_ask=Jeni i sigurt që doni të aktivizoni zgjedhjet standarte?\nFirefox duhet të fiket dhe të ndizet që ky ndryshim të aplikohet\!
-disable_all_foxtrick_modules_ask=Jeni i sigurt që doni të fikni të gjitha modulet?\n
+prefs.delete_foxtrick_branches_ask=Jeni i sigurt që doni të aktivizoni zgjedhjet standarte?\nFirefox duhet të fiket dhe të ndizet që ky ndryshim të aplikohet\!
+prefs.disable_all_foxtrick_modules_ask=Jeni i sigurt që doni të fikni të gjitha modulet?\n
 
-foxtrick.prefs.AdditionalOptions=Opcionet të tjera
+prefs.additional.title=Opcionet të tjera
 
 
 ###EOF
