--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -1070,9 +1070,9 @@ exception.error=Error %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=FoxTrick Inställningar
-foxtrick.prefs.preferences=FoxTrick Inställningar
+prefs.title=FoxTrick Inställningar
 foxtrick.log.header=FoxTrick Log
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -1081,7 +1081,7 @@ status.active=aktiv
 status.enabled=aktiverad, men ej aktiv på %s
 status.disabled=inaktiverad
 
-prefs.screenshot=Skärmdump
+module.screenshot=Skärmdump
 
 # tabs in preferences page
 #tabs
@@ -1099,34 +1099,34 @@ tab.about=Om
 tab.changes=Ändringar
 tab.help=Hjälp
 
-foxtrick.prefs.setup=Inställning
-foxtrick.prefs.setup.desc=Dessa är dina inställningar som FoxTrick identifierat. Om de är felaktiga, {vänligen rapportera}.
-foxtrick.prefs.setup.locale=Språk
-foxtrick.prefs.setup.dateFormat=Datumformat
-foxtrick.prefs.setup.country=Land
+prefs.setup=Inställning
+prefs.setup.desc=Dessa är dina inställningar som FoxTrick identifierat. Om de är felaktiga, {vänligen rapportera}.
+prefs.setup.locale=Språk
+prefs.setup.dateFormat=Datumformat
+prefs.setup.country=Land
 
-foxtrick.prefs.captionCleanupBranch=Lagrade inställningar
-foxtrick.prefs.captionLoadSavePrefs=Exportera eller importera inställningar
-foxtrick.prefs.labelCleanupBranch=Återställ standardinställningar (Endast preferenser, inga personliga inställningar.)
-foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
+prefs.storedData.title=Lagrade inställningar
+prefs.loadSave.title=Exportera eller importera inställningar
+prefs.storedData.restoreDefault=Återställ standardinställningar (Endast preferenser, inga personliga inställningar.)
+prefs.storedData.oauth.delete=Delete OAuth token/secret for the selected team.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
-foxtrick.prefs.labelDisableAll=Inaktivera alla moduler
-foxtrick.prefs.labelRevokePermissions=Upphäv alla frivilliga behörigheter (endast Chrome)
-foxtrick.prefs.labelSavePrefs=Exportera inställningar och/eller personliga inställningar
-foxtrick.prefs.labelSavePrefs_Prefs=Inställningar
-foxtrick.prefs.labelSavePrefs_Notes=Personliga inställningar (mallar, anpassade länkar och transferfilter)
-foxtrick.prefs.saveNotice=Kopiera innehållet i textområdet och spara som en fil, så du kan importera inställningar i framtiden.
-foxtrick.prefs.labelLoadPrefs=Importera inställningar (Nuvarande inställningar skrivs över)
-foxtrick.prefs.loadNotice=Klistra in sparade inställningar i textområdet och tryck på "Importera"för att importera dina inställningar.
-foxtrick.prefs.captionDisableSettings=Inaktivera FoxTrick
-foxtrick.prefs.stagepref=Inaktivera på Stage\!
-foxtrick.prefs.disableTemporaryLabel=Inaktivera temporärt
-foxtrick.prefs.saved=Inställningar sparade\!
-foxtrick.prefs.loaded=Inställningar laddade\!
-foxtrick.prefs.dismissNotice=(klicka för att avfärda detta meddelande)
+prefs.storedData.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
+prefs.storedData.disableAll=Inaktivera alla moduler
+prefs.storedData.revokePermissions=Upphäv alla frivilliga behörigheter (endast Chrome)
+prefs.loadSave.export=Exportera inställningar och/eller personliga inställningar
+prefs.loadSave.export.prefs=Inställningar
+prefs.loadSave.export.notes=Personliga inställningar (mallar, anpassade länkar och transferfilter)
+prefs.loadSave.export.notice=Kopiera innehållet i textområdet och spara som en fil, så du kan importera inställningar i framtiden.
+prefs.loadSave.import=Importera inställningar (Nuvarande inställningar skrivs över)
+prefs.loadSave.import.notice=Klistra in sparade inställningar i textområdet och tryck på "Importera"för att importera dina inställningar.
+prefs.disable.title=Inaktivera FoxTrick
+prefs.disable.stage=Inaktivera på Stage\!
+prefs.disable.temporary=Inaktivera temporärt
+prefs.feedback.saved=Inställningar sparade\!
+prefs.feedback.loaded=Inställningar laddade\!
+prefs.feedback.dismiss=(klicka för att avfärda detta meddelande)
 
-pref.xmlLoad=Ladda XML för extra information från Hattrick
+prefs.additional.xmlLoad=Ladda XML för extra information från Hattrick
 
 link.title=Länkar
 link.homepage=Hemsida
@@ -1140,8 +1140,8 @@ link.nightlySafari=Development builds, Safari
 link.recentChanges=Senaste ändringarna
 
 
-foxtrick.showReleaseNotes=Visa versionsinformationen efter FoxTrick uppdateringar
-foxtrick.versionReleaseNotes=Visa versionsinformationen för\:
+releaseNotes.show=Visa versionsinformationen efter FoxTrick uppdateringar
+releaseNotes.showFor=Visa versionsinformationen för\:
 
 about.copyright=Copyright
 about.maintainers=Ansvariga
@@ -1152,14 +1152,14 @@ about.designers=Designers
 prefs.view.by.category=Kategori
 prefs.view.by.page=Senaste hattricksida
 
-delete_foxtrick_branches_ask=Är du säker på att du vill återställa till standardinställningarna?
-delete_oauth_ask=Radera OAuth poletten/hemlig för lagID %s? 
-disable_all_foxtrick_modules_ask=Är du säker på att du vill inaktivera samtliga moduler?
+prefs.delete_foxtrick_branches_ask=Är du säker på att du vill återställa till standardinställningarna?
+prefs.delete_oauth_ask=Radera OAuth poletten/hemlig för lagID %s? 
+prefs.disable_all_foxtrick_modules_ask=Är du säker på att du vill inaktivera samtliga moduler?
 
-foxtrick.prefs.AdditionalOptions=Ytterligare alternativ
-foxtrick.prefs.smallcopyicons=Visa kopieringsikoner i "sidhuvudet" i stället för i sidomenyn
-foxtrick.prefs.DisplayHTMLDebugOutput=Visa ytterligare debug -utdata i Hattricks sidfot (för utvecklare)
+prefs.additional.title=Ytterligare alternativ
+prefs.additional.smallCopyIcons=Visa kopieringsikoner i "sidhuvudet" i stället för i sidomenyn
+prefs.additional.HTMLDebugLog=Visa ytterligare debug -utdata i Hattricks sidfot (för utvecklare)
 
-foxtrick.prefs.permissionsHint=%s behöver behörighet för att fungera. Tillåt åtkomst i följande dialogruta.
+prefs.permissionsHint=%s behöver behörighet för att fungera. Tillåt åtkomst i följande dialogruta.
 
 ###EOF
