--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -497,7 +497,7 @@ button.disableAll=Вимкнути все
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick.prefs.preferences=Налаштування
+prefs.title=Налаштування
 # keep the following line untranslated
 
 
@@ -514,22 +514,22 @@ tab.about=Про FoxTrick
 tab.changes=Зміни
 tab.help=Допомога
 
-foxtrick.prefs.setup.locale=Мовні налаштування
-foxtrick.prefs.setup.dateFormat=Налаштування формату дати
-foxtrick.prefs.setup.country=Налаштування країни
+prefs.setup.locale=Мовні налаштування
+prefs.setup.dateFormat=Налаштування формату дати
+prefs.setup.country=Налаштування країни
 
-foxtrick.prefs.captionCleanupBranch=Скидання налаштувань
-foxtrick.prefs.captionLoadSavePrefs=Експорт та імпорт налаштувань
-foxtrick.prefs.labelCleanupBranch=Скинути всі налаштування FoxTrick (Лише загальні, а не особисті налаштування. Потрібен перезапуск.)
+prefs.storedData.title=Скидання налаштувань
+prefs.loadSave.title=Експорт та імпорт налаштувань
+prefs.storedData.restoreDefault=Скинути всі налаштування FoxTrick (Лише загальні, а не особисті налаштування. Потрібен перезапуск.)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Вимкнути всі модулі FoxTrick
-foxtrick.prefs.labelSavePrefs=Експортувати налаштування FoxTrick та особисті налаштування
-foxtrick.prefs.labelSavePrefs_Prefs=Експортувати налаштування FoxTrick
-foxtrick.prefs.labelSavePrefs_Notes=Експортувати особисті налаштування (нотатки, шаблони та особисті посилання)
-foxtrick.prefs.labelLoadPrefs=Імпортувати налаштування FoxTrick (Потрібен перезапуск)
-foxtrick.prefs.captionDisableSettings=Вимкнути Foxtrick
-foxtrick.prefs.stagepref=Вимкнути FoxTrick на сервері Stage
-foxtrick.prefs.disableTemporaryLabel=Тимчасово вимкнути FoxTrick
+prefs.storedData.disableAll=Вимкнути всі модулі FoxTrick
+prefs.loadSave.export=Експортувати налаштування FoxTrick та особисті налаштування
+prefs.loadSave.export.prefs=Експортувати налаштування FoxTrick
+prefs.loadSave.export.notes=Експортувати особисті налаштування (нотатки, шаблони та особисті посилання)
+prefs.loadSave.import=Імпортувати налаштування FoxTrick (Потрібен перезапуск)
+prefs.disable.title=Вимкнути Foxtrick
+prefs.disable.stage=Вимкнути FoxTrick на сервері Stage
+prefs.disable.temporary=Тимчасово вимкнути FoxTrick
 
 
 
@@ -537,10 +537,10 @@ foxtrick.prefs.disableTemporaryLabel=Тимчасово вимкнути FoxTric
 
 
 
-delete_foxtrick_branches_ask=Впевнені, що хочете скинути всі налаштування?\nFirefox потрібно перезавантажити після скидання\!
-disable_all_foxtrick_modules_ask=Впевнені, що бажаєте вимкнути всі модулі FoxTrick?\n
+prefs.delete_foxtrick_branches_ask=Впевнені, що хочете скинути всі налаштування?\nFirefox потрібно перезавантажити після скидання\!
+prefs.disable_all_foxtrick_modules_ask=Впевнені, що бажаєте вимкнути всі модулі FoxTrick?\n
 
-foxtrick.prefs.AdditionalOptions=Додаткові параметри
+prefs.additional.title=Додаткові параметри
 
 
 ###EOF
