--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -758,9 +758,9 @@ button.disableAll=Tắt tất cả
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Tùy chọn
-foxtrick.prefs.preferences=Tùy chọn Fox Trick
+prefs.title=Tùy chọn Fox Trick
 # keep the following line untranslated
 
 status.active=hoạt động
@@ -781,22 +781,22 @@ tab.about=Về Hattrick
 tab.changes=Sự thay đổi
 tab.help=Trợ giúp
 
-foxtrick.prefs.setup.locale=Ngôn ngữ
-foxtrick.prefs.setup.dateFormat=Định dạng ngày
-foxtrick.prefs.setup.country=Đất nước
+prefs.setup.locale=Ngôn ngữ
+prefs.setup.dateFormat=Định dạng ngày
+prefs.setup.country=Đất nước
 
-foxtrick.prefs.captionCleanupBranch=Tùy chọn được lưu giữ
-foxtrick.prefs.captionLoadSavePrefs=Đưa ra và nhập vào những tùy chọn
-foxtrick.prefs.labelCleanupBranch=Hồi phục lại những thiết lập mặc định của FoxTrick (chỉ phần tùy chọn, không có những thiết lập cá nhân, cần phải khởi động lại trình  duyệt)
+prefs.storedData.title=Tùy chọn được lưu giữ
+prefs.loadSave.title=Đưa ra và nhập vào những tùy chọn
+prefs.storedData.restoreDefault=Hồi phục lại những thiết lập mặc định của FoxTrick (chỉ phần tùy chọn, không có những thiết lập cá nhân, cần phải khởi động lại trình  duyệt)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Vô hiệutất cả các mục trong FoxTrick
-foxtrick.prefs.labelSavePrefs=Đưa ra những tùy chọn của FoxTrick và thiết lập cá nhân
-foxtrick.prefs.labelSavePrefs_Prefs=Đưa ra những tùy chọn của FoxTrick
-foxtrick.prefs.labelSavePrefs_Notes=Đưa ra những thiết lập cá nhân (ghi chú, mẫu & đường dẫn tùy chọn)
-foxtrick.prefs.labelLoadPrefs=Nhập tùy chọn FoxTrick (Những thiết lập hiện tại sẽ bị ghi đè. Cần khởi động lại trình duyệt)
-foxtrick.prefs.captionDisableSettings=Tắt FoxTrick
-foxtrick.prefs.stagepref=Tắt FoxTrick ở Stage server
-foxtrick.prefs.disableTemporaryLabel=Vô hiệu hóa FoxTrick tạm thời
+prefs.storedData.disableAll=Vô hiệutất cả các mục trong FoxTrick
+prefs.loadSave.export=Đưa ra những tùy chọn của FoxTrick và thiết lập cá nhân
+prefs.loadSave.export.prefs=Đưa ra những tùy chọn của FoxTrick
+prefs.loadSave.export.notes=Đưa ra những thiết lập cá nhân (ghi chú, mẫu & đường dẫn tùy chọn)
+prefs.loadSave.import=Nhập tùy chọn FoxTrick (Những thiết lập hiện tại sẽ bị ghi đè. Cần khởi động lại trình duyệt)
+prefs.disable.title=Tắt FoxTrick
+prefs.disable.stage=Tắt FoxTrick ở Stage server
+prefs.disable.temporary=Vô hiệu hóa FoxTrick tạm thời
 
 
 
@@ -804,12 +804,12 @@ foxtrick.prefs.disableTemporaryLabel=Vô hiệu hóa FoxTrick tạm thời
 
 
 
-delete_foxtrick_branches_ask=Bạn có chắc là bạn muốn khôi phục lại thiết lập mặc định?\nFirefox phải được khởi động lại để có tác dụng\!
-disable_all_foxtrick_modules_ask=Bạn có chắc bạn muốn tắt tất cả các tính năng?\n
+prefs.delete_foxtrick_branches_ask=Bạn có chắc là bạn muốn khôi phục lại thiết lập mặc định?\nFirefox phải được khởi động lại để có tác dụng\!
+prefs.disable_all_foxtrick_modules_ask=Bạn có chắc bạn muốn tắt tất cả các tính năng?\n
 
-foxtrick.prefs.AdditionalOptions=Thêm tùy chọn
-foxtrick.prefs.smallcopyicons=Biểu tượng sao chép nhỏ ở tiêu đề thanh cho một hộp thoại bên lề riêng biệt
-foxtrick.prefs.DisplayHTMLDebugOutput=Hiển thị phương pháp cho việc phát hiện lỗi ở trang Hattrick (cho những người phát triển game)
+prefs.additional.title=Thêm tùy chọn
+prefs.additional.smallCopyIcons=Biểu tượng sao chép nhỏ ở tiêu đề thanh cho một hộp thoại bên lề riêng biệt
+prefs.additional.HTMLDebugLog=Hiển thị phương pháp cho việc phát hiện lỗi ở trang Hattrick (cho những người phát triển game)
 
 
 ###EOF
