--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -955,9 +955,9 @@ exception.error=错误 %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=首选项
-foxtrick.prefs.preferences=FoxTrick 首选项
+prefs.title=FoxTrick 首选项
 foxtrick.log.header=FoxTrick 日志
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
@@ -966,7 +966,7 @@ status.active=工作中
 status.enabled=已启用, 但在 %s 上无效
 status.disabled=已禁用
 
-prefs.screenshot=截屏
+module.screenshot=截屏
 
 # tabs in preferences page
 #tabs
@@ -984,31 +984,31 @@ tab.about=关于
 tab.changes=最近更新
 tab.help=帮助
 
-foxtrick.prefs.setup.locale=语言
-foxtrick.prefs.setup.dateFormat=日期格式
-foxtrick.prefs.setup.country=国家
+prefs.setup.locale=语言
+prefs.setup.dateFormat=日期格式
+prefs.setup.country=国家
 
-foxtrick.prefs.captionCleanupBranch=清理首选项
-foxtrick.prefs.captionLoadSavePrefs=导出或导入首选项
-foxtrick.prefs.labelCleanupBranch=重置首选项 (仅还原首选项, 不还原个人设置)
-foxtrick.prefs.oauth.delete=删除选定队伍的 OAuth 口令/密钥.
+prefs.storedData.title=清理首选项
+prefs.loadSave.title=导出或导入首选项
+prefs.storedData.restoreDefault=重置首选项 (仅还原首选项, 不还原个人设置)
+prefs.storedData.oauth.delete=删除选定队伍的 OAuth 口令/密钥.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=仅在此浏览器中起作用. 要完全移除 FoxTrick 对一个球队的访问权限, 请使用 Hattrick 的 {CHPP 管理页面}.
-foxtrick.prefs.labelDisableAll=禁用所有模块
-foxtrick.prefs.labelSavePrefs=导出首选项与个人设置
-foxtrick.prefs.labelSavePrefs_Prefs=导出首选项
-foxtrick.prefs.labelSavePrefs_Notes=导出个人设置 (模板, 自定义链接, 和转会搜索)
-foxtrick.prefs.saveNotice=将文本框中的内容保存在一个文件中, 以在将来需要时导入之.
-foxtrick.prefs.labelLoadPrefs=导入首选项 (当前设置将被覆盖)
-foxtrick.prefs.loadNotice=将之前保存的设置粘贴在文本框中后点击“导入”以导入设置.
-foxtrick.prefs.captionDisableSettings=禁用 FoxTrick
-foxtrick.prefs.stagepref=在 Stage 服务器中禁用
-foxtrick.prefs.disableTemporaryLabel=临时禁用
-foxtrick.prefs.saved=已保存选项\!
-foxtrick.prefs.loaded=已载入选项\!
-foxtrick.prefs.dismissNotice=(点击关闭)
+prefs.storedData.oauth.delete.desc=仅在此浏览器中起作用. 要完全移除 FoxTrick 对一个球队的访问权限, 请使用 Hattrick 的 {CHPP 管理页面}.
+prefs.storedData.disableAll=禁用所有模块
+prefs.loadSave.export=导出首选项与个人设置
+prefs.loadSave.export.prefs=导出首选项
+prefs.loadSave.export.notes=导出个人设置 (模板, 自定义链接, 和转会搜索)
+prefs.loadSave.export.notice=将文本框中的内容保存在一个文件中, 以在将来需要时导入之.
+prefs.loadSave.import=导入首选项 (当前设置将被覆盖)
+prefs.loadSave.import.notice=将之前保存的设置粘贴在文本框中后点击“导入”以导入设置.
+prefs.disable.title=禁用 FoxTrick
+prefs.disable.stage=在 Stage 服务器中禁用
+prefs.disable.temporary=临时禁用
+prefs.feedback.saved=已保存选项\!
+prefs.feedback.loaded=已载入选项\!
+prefs.feedback.dismiss=(点击关闭)
 
-pref.xmlLoad=从 Hattrick 加载 XML 以获取额外信息
+prefs.additional.xmlLoad=从 Hattrick 加载 XML 以获取额外信息
 
 link.title=链接
 link.homepage=主页
@@ -1020,8 +1020,8 @@ link.nightlyChrome=Google Chrome 开发版本
 link.recentChanges=最近更新
 
 
-foxtrick.showReleaseNotes=在 FoxTrick 更新后显示版本发布信息
-foxtrick.versionReleaseNotes=显示发布信息\:
+releaseNotes.show=在 FoxTrick 更新后显示版本发布信息
+releaseNotes.showFor=显示发布信息\:
 
 about.copyright=版权
 about.maintainers=维护者
@@ -1032,13 +1032,13 @@ about.designers=设计师
 prefs.view.by.category=根据类别查看
 prefs.view.by.page=根据上次访问的 HT 页面查看
 
-delete_foxtrick_branches_ask=你确定要重设为默认设置吗?
-delete_oauth_ask=确定要删除球队 \#%s 的 OAuth 口令/密钥吗?
-disable_all_foxtrick_modules_ask=你确定要禁用所有模块吗?
+prefs.delete_foxtrick_branches_ask=你确定要重设为默认设置吗?
+prefs.delete_oauth_ask=确定要删除球队 \#%s 的 OAuth 口令/密钥吗?
+prefs.disable_all_foxtrick_modules_ask=你确定要禁用所有模块吗?
 
-foxtrick.prefs.AdditionalOptions=附加选项
-foxtrick.prefs.smallcopyicons=在头部而不是边栏中显示复制图标
-foxtrick.prefs.DisplayHTMLDebugOutput=在页面底部显示 FoxTrick 日志 (用于调试)
+prefs.additional.title=附加选项
+prefs.additional.smallCopyIcons=在头部而不是边栏中显示复制图标
+prefs.additional.HTMLDebugLog=在页面底部显示 FoxTrick 日志 (用于调试)
 
 
 ###EOF
