--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -775,9 +775,9 @@ button.disableAll=Inhabilita'ls tots
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Preferències
-foxtrick.prefs.preferences=Preferències de FoxTrick
+prefs.title=Preferències de FoxTrick
 # keep the following line untranslated
 
 status.active=actiu
@@ -798,22 +798,22 @@ tab.about=Quant a
 tab.changes=Canvis
 tab.help=Ajuda
 
-foxtrick.prefs.setup.locale=Idioma
-foxtrick.prefs.setup.dateFormat=Format de data
-foxtrick.prefs.setup.country=País
+prefs.setup.locale=Idioma
+prefs.setup.dateFormat=Format de data
+prefs.setup.country=País
 
-foxtrick.prefs.captionCleanupBranch=Preferències desades
-foxtrick.prefs.captionLoadSavePrefs=Exporta o importa les preferències
-foxtrick.prefs.labelCleanupBranch=Recupera els valors per defecte (només preferències, no les opcions personalitzades. Cal reiniciar.)
+prefs.storedData.title=Preferències desades
+prefs.loadSave.title=Exporta o importa les preferències
+prefs.storedData.restoreDefault=Recupera els valors per defecte (només preferències, no les opcions personalitzades. Cal reiniciar.)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Deshabilita tots els mòduls
-foxtrick.prefs.labelSavePrefs=Exporta les preferències i/o les opcions personalitzades
-foxtrick.prefs.labelSavePrefs_Prefs=Preferències
-foxtrick.prefs.labelSavePrefs_Notes=Opcions personalitzades (notes, plantilles i enllaços personalitzats)
-foxtrick.prefs.labelLoadPrefs=Importa les preferències (pot ser que les preferències actuals es sobreescriguin. Cal reiniciar)
-foxtrick.prefs.captionDisableSettings=Deshabilita FoxTrick
-foxtrick.prefs.stagepref=Deshabilita en el servidor stage
-foxtrick.prefs.disableTemporaryLabel=Deshabilita temporalment
+prefs.storedData.disableAll=Deshabilita tots els mòduls
+prefs.loadSave.export=Exporta les preferències i/o les opcions personalitzades
+prefs.loadSave.export.prefs=Preferències
+prefs.loadSave.export.notes=Opcions personalitzades (notes, plantilles i enllaços personalitzats)
+prefs.loadSave.import=Importa les preferències (pot ser que les preferències actuals es sobreescriguin. Cal reiniciar)
+prefs.disable.title=Deshabilita FoxTrick
+prefs.disable.stage=Deshabilita en el servidor stage
+prefs.disable.temporary=Deshabilita temporalment
 
 
 
@@ -821,12 +821,12 @@ foxtrick.prefs.disableTemporaryLabel=Deshabilita temporalment
 
 
 
-delete_foxtrick_branches_ask=Voleu recuperar els valors per defecte de les preferències?\nCaldrà reiniciar el firefox per activar aquest canvi.
-disable_all_foxtrick_modules_ask=Voleu emprar deshabilitat tots els mòduls?\n
+prefs.delete_foxtrick_branches_ask=Voleu recuperar els valors per defecte de les preferències?\nCaldrà reiniciar el firefox per activar aquest canvi.
+prefs.disable_all_foxtrick_modules_ask=Voleu emprar deshabilitat tots els mòduls?\n
 
-foxtrick.prefs.AdditionalOptions=Opcions addicionals
-foxtrick.prefs.smallcopyicons=Mostra icones per copiar a la capçalera en lloc de en una caixa lateral
-foxtrick.prefs.DisplayHTMLDebugOutput=Mostra informació de depuració al peu de la pàgina de Hattrick (per desenvolupadors)
+prefs.additional.title=Opcions addicionals
+prefs.additional.smallCopyIcons=Mostra icones per copiar a la capçalera en lloc de en una caixa lateral
+prefs.additional.HTMLDebugLog=Mostra informació de depuració al peu de la pàgina de Hattrick (per desenvolupadors)
 
 
 ###EOF
