--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -1101,9 +1101,9 @@ exception.error=Error %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Preferencias
-foxtrick.prefs.preferences=Preferencias de FoxTrick
+prefs.title=Preferencias de FoxTrick
 foxtrick.log.header=Log de Foxtrick
 # keep the following line untranslated
 
@@ -1111,7 +1111,7 @@ status.active=activo
 status.enabled=habilitado, pero no activo en %s
 status.disabled=inhabilitado
 
-prefs.screenshot=Captura de pantalla
+module.screenshot=Captura de pantalla
 
 # tabs in preferences page
 #tabs
@@ -1129,35 +1129,35 @@ tab.about=Acerca
 tab.changes=Cambios
 tab.help=Ayuda
 
-foxtrick.prefs.setup=Configuración
-foxtrick.prefs.setup.desc=Estos son los ajustes que FoxTrick ha detectado. Si son incorrectos, {por favor reportalo}.
-foxtrick.prefs.setup.locale=Idioma
-foxtrick.prefs.setup.dateFormat=Formato de Fecha
-foxtrick.prefs.setup.country=País
+prefs.setup=Configuración
+prefs.setup.desc=Estos son los ajustes que FoxTrick ha detectado. Si son incorrectos, {por favor reportalo}.
+prefs.setup.locale=Idioma
+prefs.setup.dateFormat=Formato de Fecha
+prefs.setup.country=País
 
-foxtrick.prefs.captionCleanupBranch=Preferencias Guardadas
-foxtrick.prefs.captionLoadSavePrefs=Exportar o Importar preferencias
-foxtrick.prefs.labelCleanupBranch=Restaurar valores predeterminados (Solo preferencias, sin ajustes personales. Requiere reiniciar.)
-foxtrick.prefs.oauth.delete=Borrar el token OAuth del equipo seleccionado.
+prefs.storedData.title=Preferencias Guardadas
+prefs.loadSave.title=Exportar o Importar preferencias
+prefs.storedData.restoreDefault=Restaurar valores predeterminados (Solo preferencias, sin ajustes personales. Requiere reiniciar.)
+prefs.storedData.oauth.delete=Borrar el token OAuth del equipo seleccionado.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Solo aplica para este navegador. Para quitar definitavamente el acceso de Foxtrick a tu equipo, ve al manejo de CHPP de Hattrick\: {CHPP management}
-foxtrick.prefs.labelDisableAll=Deshabilitar todos los módulos
-foxtrick.prefs.labelRevokePermissions=Revocar todos los permisos opcionales (Chrome solamente)
-foxtrick.prefs.labelSavePrefs=Exportar las preferencias y/o configuración personal
-foxtrick.prefs.labelSavePrefs_Prefs=Preferencias
-foxtrick.prefs.labelSavePrefs_Notes=Configuración personal (notas, plantillas y enlaces personalizados)
-foxtrick.prefs.labelSavePrefs_Token=Token/Secreto OAuth
-foxtrick.prefs.saveNotice=Copiar el contenido en el área de texto y guardarlo como archivo, para poder importar tus preferencias en el futuro.
-foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias actuales serán sobreescritas)
-foxtrick.prefs.loadNotice=Pega tus preferencias guardadas en el cuadro de texto y presiona "Importar".
-foxtrick.prefs.captionDisableSettings=Deshabilitar Foxtrick
-foxtrick.prefs.stagepref=Desahabilitar en el servidor de Stage
-foxtrick.prefs.disableTemporaryLabel=Deshabilitar temporalmente
-foxtrick.prefs.saved=Preferencias Guardadas\!
-foxtrick.prefs.loaded=Preferencias cargadas\!
-foxtrick.prefs.dismissNotice=(clic para descartar este aviso)
+prefs.storedData.oauth.delete.desc=Solo aplica para este navegador. Para quitar definitavamente el acceso de Foxtrick a tu equipo, ve al manejo de CHPP de Hattrick\: {CHPP management}
+prefs.storedData.disableAll=Deshabilitar todos los módulos
+prefs.storedData.revokePermissions=Revocar todos los permisos opcionales (Chrome solamente)
+prefs.loadSave.export=Exportar las preferencias y/o configuración personal
+prefs.loadSave.export.prefs=Preferencias
+prefs.loadSave.export.notes=Configuración personal (notas, plantillas y enlaces personalizados)
+prefs.loadSave.export.token=Token/Secreto OAuth
+prefs.loadSave.export.notice=Copiar el contenido en el área de texto y guardarlo como archivo, para poder importar tus preferencias en el futuro.
+prefs.loadSave.import=Importar preferencias (Las preferencias actuales serán sobreescritas)
+prefs.loadSave.import.notice=Pega tus preferencias guardadas en el cuadro de texto y presiona "Importar".
+prefs.disable.title=Deshabilitar Foxtrick
+prefs.disable.stage=Desahabilitar en el servidor de Stage
+prefs.disable.temporary=Deshabilitar temporalmente
+prefs.feedback.saved=Preferencias Guardadas\!
+prefs.feedback.loaded=Preferencias cargadas\!
+prefs.feedback.dismiss=(clic para descartar este aviso)
 
-pref.xmlLoad=Cargar XMLs para información extra desde Hattrick
+prefs.additional.xmlLoad=Cargar XMLs para información extra desde Hattrick
 
 link.title=Enlaces
 link.homepage=Página de inicio
@@ -1172,8 +1172,8 @@ link.recentChanges=Cambios recientes
 
 module.link=Puedes copiar y pegar este enlace al foro para dirigir aquí
 
-foxtrick.showReleaseNotes=Mostrar notas de la versión luego de que Foxtrick se actualice
-foxtrick.versionReleaseNotes=Notas de la versión para\:
+releaseNotes.show=Mostrar notas de la versión luego de que Foxtrick se actualice
+releaseNotes.showFor=Notas de la versión para\:
 
 about.copyright=Copyright
 about.maintainers=Responsables de mantenimiento
@@ -1184,15 +1184,15 @@ about.designers=Deseñadores
 prefs.view.by.category=Ver por categoría
 prefs.view.by.page=Ver de acuerdo a última página de HT
 
-delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
-delete_oauth_ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s? 
-disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
-revoke_permissions_ask=¿Estás seguro que deseas revocar todos los permisos opcionales?
+prefs.delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
+prefs.delete_oauth_ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s? 
+prefs.disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
+prefs.revoke_permissions_ask=¿Estás seguro que deseas revocar todos los permisos opcionales?
 
-foxtrick.prefs.AdditionalOptions=Opciones Adicionales
-foxtrick.prefs.smallcopyicons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
-foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick page (for developers)
+prefs.additional.title=Opciones Adicionales
+prefs.additional.smallCopyIcons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
+prefs.additional.HTMLDebugLog=Show additional debug output on Hattrick page (for developers)
 
-foxtrick.prefs.permissionsHint=%s necesita el permiso para trabajar. Permite el acceso en el siguiente cuadro de dialogo. Si no das el permiso, este modulo sera deshabilitado.
+prefs.permissionsHint=%s necesita el permiso para trabajar. Permite el acceso en el siguiente cuadro de dialogo. Si no das el permiso, este modulo sera deshabilitado.
 
 ###EOF
