--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -892,16 +892,16 @@ exception.error=Villa %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Stillingar
-foxtrick.prefs.preferences=FoxTrick Stillingar
+prefs.title=FoxTrick Stillingar
 # keep the following line untranslated
 
 status.active=virkur
 status.enabled=í gangi, en ekki virkur á  %s
 status.disabled=aftengdur
 
-prefs.screenshot=Skjámynd
+module.screenshot=Skjámynd
 
 # tabs in preferences page
 #tabs
@@ -917,27 +917,27 @@ tab.about=Upplýsingar
 tab.changes=Breytingar
 tab.help=Hjálp
 
-foxtrick.prefs.setup.locale=Tungumál
-foxtrick.prefs.setup.dateFormat=Dagsetningarsnið
-foxtrick.prefs.setup.country=Land
+prefs.setup.locale=Tungumál
+prefs.setup.dateFormat=Dagsetningarsnið
+prefs.setup.country=Land
 
-foxtrick.prefs.captionCleanupBranch=Geymdar kjörstillingar
-foxtrick.prefs.captionLoadSavePrefs=Flytja út eða inn kjörstillingar
-foxtrick.prefs.labelCleanupBranch=Endurheimtir sjálfgefnar kjörstillingar (Aðeins kjörstillingar, engar persónulegar stillingar).
+prefs.storedData.title=Geymdar kjörstillingar
+prefs.loadSave.title=Flytja út eða inn kjörstillingar
+prefs.storedData.restoreDefault=Endurheimtir sjálfgefnar kjörstillingar (Aðeins kjörstillingar, engar persónulegar stillingar).
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=Aftengja allar einingar
-foxtrick.prefs.labelSavePrefs=Flytja út kjörstillingar og/eða persónulegar stillingar
-foxtrick.prefs.labelSavePrefs_Prefs=Kjörstillingar
-foxtrick.prefs.labelSavePrefs_Notes=Persónulegar stillingar (Sniðmát, sérsniðnir tenglar og sölulistasíur)
-foxtrick.prefs.saveNotice=Afritaðu innihaldið í textareitnum og vistaðu sem skjal, svo þú getir flutt inn kjörstillingar í framtíðinni.
-foxtrick.prefs.labelLoadPrefs=Flytja inn kjörstillingar (Núverandi kjörstillingar verða yfirskrifaðar)
-foxtrick.prefs.loadNotice=Límdu vistaðar kjörstillingar í textareitinn og smelltu á 'Flytja inn' til að flytja inn þínar kjörstillingar.
-foxtrick.prefs.captionDisableSettings=Aftengja FoxTrick
-foxtrick.prefs.stagepref=Aftengja á Stage netþjóni
-foxtrick.prefs.disableTemporaryLabel=Aftengja tímabundið
-foxtrick.prefs.saved=Kjörstillingar vistaðar\!
-foxtrick.prefs.loaded=Kjörstillingum hlaðið inn\!
-foxtrick.prefs.dismissNotice=(smelltu til að loka þessari tilkynningu)
+prefs.storedData.disableAll=Aftengja allar einingar
+prefs.loadSave.export=Flytja út kjörstillingar og/eða persónulegar stillingar
+prefs.loadSave.export.prefs=Kjörstillingar
+prefs.loadSave.export.notes=Persónulegar stillingar (Sniðmát, sérsniðnir tenglar og sölulistasíur)
+prefs.loadSave.export.notice=Afritaðu innihaldið í textareitnum og vistaðu sem skjal, svo þú getir flutt inn kjörstillingar í framtíðinni.
+prefs.loadSave.import=Flytja inn kjörstillingar (Núverandi kjörstillingar verða yfirskrifaðar)
+prefs.loadSave.import.notice=Límdu vistaðar kjörstillingar í textareitinn og smelltu á 'Flytja inn' til að flytja inn þínar kjörstillingar.
+prefs.disable.title=Aftengja FoxTrick
+prefs.disable.stage=Aftengja á Stage netþjóni
+prefs.disable.temporary=Aftengja tímabundið
+prefs.feedback.saved=Kjörstillingar vistaðar\!
+prefs.feedback.loaded=Kjörstillingum hlaðið inn\!
+prefs.feedback.dismiss=(smelltu til að loka þessari tilkynningu)
 
 
 link.title=Tenglar
@@ -950,8 +950,8 @@ link.nightlyChrome=Þróunaruppbyggingar fyrir Google Chrome
 link.recentChanges=Nýlegar breytingar
 
 
-foxtrick.showReleaseNotes=Sýna útgáfuglósur eftir að FoxTrick uppfærir sig
-foxtrick.versionReleaseNotes=Sýna útgáfuglósur fyrir\:
+releaseNotes.show=Sýna útgáfuglósur eftir að FoxTrick uppfærir sig
+releaseNotes.showFor=Sýna útgáfuglósur fyrir\:
 
 about.copyright=Copyright (Höfundarréttur)
 about.developers=Forritarar
@@ -959,12 +959,12 @@ about.translators=Þýðendur
 about.designers=Hönnuður
 
 
-delete_foxtrick_branches_ask=Ertu viss um að þú viljir endurheimta sjálfgefnar stillingar?
-disable_all_foxtrick_modules_ask=Ertu viss um að þú viljir aftengja allar einingar?
+prefs.delete_foxtrick_branches_ask=Ertu viss um að þú viljir endurheimta sjálfgefnar stillingar?
+prefs.disable_all_foxtrick_modules_ask=Ertu viss um að þú viljir aftengja allar einingar?
 
-foxtrick.prefs.AdditionalOptions=Viðbótarmöguleikar
-foxtrick.prefs.smallcopyicons=Sýna afritunartáknmynd í hausnum í staðinn fyrir hliðarstiku
-foxtrick.prefs.DisplayHTMLDebugOutput=Sýna FoxTrick skrá á botni á síðum (fyrir kembiúttak (debugging))
+prefs.additional.title=Viðbótarmöguleikar
+prefs.additional.smallCopyIcons=Sýna afritunartáknmynd í hausnum í staðinn fyrir hliðarstiku
+prefs.additional.HTMLDebugLog=Sýna FoxTrick skrá á botni á síðum (fyrir kembiúttak (debugging))
 
 
 ###EOF
