--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -538,7 +538,7 @@ button.disableAll=All ofschalten
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick.prefs.preferences=Astellungen
+prefs.title=Astellungen
 # keep the following line untranslated
 
 
@@ -555,22 +555,22 @@ tab.about=Iwwer FoxTrick
 tab.changes=Ännerungen
 tab.help=Hëllef
 
-foxtrick.prefs.setup.locale=Sproochastellungen
-foxtrick.prefs.setup.dateFormat=Format vum Datum
-foxtrick.prefs.setup.country=Wiel vum Land
+prefs.setup.locale=Sproochastellungen
+prefs.setup.dateFormat=Format vum Datum
+prefs.setup.country=Wiel vum Land
 
-foxtrick.prefs.captionCleanupBranch=Gespäichert Astellungen
-foxtrick.prefs.captionLoadSavePrefs=Astellungen exportéieren oder importéieren
-foxtrick.prefs.labelCleanupBranch=D'Astellunge vu FoxTrick op d'Normalwäerter zrécksetzen (nëmmen d'Astellungen, keng perséinlech Konfiguratiounen, Firefox muss nei lancéiert ginn)
+prefs.storedData.title=Gespäichert Astellungen
+prefs.loadSave.title=Astellungen exportéieren oder importéieren
+prefs.storedData.restoreDefault=D'Astellunge vu FoxTrick op d'Normalwäerter zrécksetzen (nëmmen d'Astellungen, keng perséinlech Konfiguratiounen, Firefox muss nei lancéiert ginn)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.labelDisableAll=All FoxTrick-Moduler ofschalten
-foxtrick.prefs.labelSavePrefs=FoxTrick-Astellungen a perséinlech Konfiguratiounen exportéieren
-foxtrick.prefs.labelSavePrefs_Prefs=FoxTrick-Astellungen exportéieren
-foxtrick.prefs.labelSavePrefs_Notes=Perséinlech Konfiguratiounen exportéieren (Notizen, Modeller & eege Links)
-foxtrick.prefs.labelLoadPrefs=FoxTrick-Astellungen importéieren (Déi aktuell Astellunge kéinten eventuell iwwerschriwwe ginn. Firefox muss nei lancéiert ginn)
-foxtrick.prefs.captionDisableSettings=FoxTrick desaktivéieren
-foxtrick.prefs.stagepref=FoxTrick um Stage-Server desaktivéieren
-foxtrick.prefs.disableTemporaryLabel=FoxTrick temporär desaktivéieren
+prefs.storedData.disableAll=All FoxTrick-Moduler ofschalten
+prefs.loadSave.export=FoxTrick-Astellungen a perséinlech Konfiguratiounen exportéieren
+prefs.loadSave.export.prefs=FoxTrick-Astellungen exportéieren
+prefs.loadSave.export.notes=Perséinlech Konfiguratiounen exportéieren (Notizen, Modeller & eege Links)
+prefs.loadSave.import=FoxTrick-Astellungen importéieren (Déi aktuell Astellunge kéinten eventuell iwwerschriwwe ginn. Firefox muss nei lancéiert ginn)
+prefs.disable.title=FoxTrick desaktivéieren
+prefs.disable.stage=FoxTrick um Stage-Server desaktivéieren
+prefs.disable.temporary=FoxTrick temporär desaktivéieren
 
 
 
@@ -578,10 +578,10 @@ foxtrick.prefs.disableTemporaryLabel=FoxTrick temporär desaktivéieren
 
 
 
-delete_foxtrick_branches_ask=Bass de sécher, datt s de alles wëlls op déi normal Wäerter zrécksetzen?\nFirefox muss frësch opgemaach ginn, fir datt dës Ännerung gräift\!
-disable_all_foxtrick_modules_ask=Bass de sécher, datt s de all d'Moduler wëlls ofschalten?\n
+prefs.delete_foxtrick_branches_ask=Bass de sécher, datt s de alles wëlls op déi normal Wäerter zrécksetzen?\nFirefox muss frësch opgemaach ginn, fir datt dës Ännerung gräift\!
+prefs.disable_all_foxtrick_modules_ask=Bass de sécher, datt s de all d'Moduler wëlls ofschalten?\n
 
-foxtrick.prefs.AdditionalOptions=Zousätzlech Optiounen
+prefs.additional.title=Zousätzlech Optiounen
 
 
 ###EOF
