--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -1100,9 +1100,9 @@ exception.error=Hata\: %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Tercihler
-foxtrick.prefs.preferences=FoxTrick Tercihleri
+prefs.title=FoxTrick Tercihleri
 foxtrick.log.header=FoxTrick günlüğü
 # keep the following line untranslated
 
@@ -1110,7 +1110,7 @@ status.active=etkin
 status.enabled=etkin, ancak %s üzerinde etkin değil
 status.disabled=devre dışı
 
-prefs.screenshot=Ekran görüntüsü
+module.screenshot=Ekran görüntüsü
 
 # tabs in preferences page
 #tabs
@@ -1128,35 +1128,35 @@ tab.about=Hakkında
 tab.changes=Değişiklikler
 tab.help=Yardım
 
-foxtrick.prefs.setup=Kurulum
-foxtrick.prefs.setup.desc=Bunlar FoxTrick tarafından algılanan ayarlarınız. Yanlışsa, {lütfen raporla}.
-foxtrick.prefs.setup.locale=Yerel ayar
-foxtrick.prefs.setup.dateFormat=Tarih biçimi
-foxtrick.prefs.setup.country=Ülke
+prefs.setup=Kurulum
+prefs.setup.desc=Bunlar FoxTrick tarafından algılanan ayarlarınız. Yanlışsa, {lütfen raporla}.
+prefs.setup.locale=Yerel ayar
+prefs.setup.dateFormat=Tarih biçimi
+prefs.setup.country=Ülke
 
-foxtrick.prefs.captionCleanupBranch=Saklanan tercihler
-foxtrick.prefs.captionLoadSavePrefs=Tercihleri içe ya da dışa aktar
-foxtrick.prefs.labelCleanupBranch=Varsayılan tercihleri geri yükle (Sadece tercihler, kişisel seçenekler değil)
-foxtrick.prefs.oauth.delete=OAuth'u seçilen takım için sil.
+prefs.storedData.title=Saklanan tercihler
+prefs.loadSave.title=Tercihleri içe ya da dışa aktar
+prefs.storedData.restoreDefault=Varsayılan tercihleri geri yükle (Sadece tercihler, kişisel seçenekler değil)
+prefs.storedData.oauth.delete=OAuth'u seçilen takım için sil.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Sadece bu tarayıcı için geçerlidir. Foxtrick'in erişimini tamamıyla iptal etmek için, Hattrick'in {CHPP tercihleri} kısmını kullanın.
-foxtrick.prefs.labelDisableAll=Tüm modüller devre dışı bırakma
-foxtrick.prefs.labelRevokePermissions=Bütün opsiyonel izinleri iptal et (Chrome için)
-foxtrick.prefs.labelSavePrefs=Tercihler ve/veya kişisel seçenekleri dışa aktar
-foxtrick.prefs.labelSavePrefs_Prefs=Tercihler
-foxtrick.prefs.labelSavePrefs_Notes=Kişisel ayarlar (Şablonlar, özel linkler ve transfer filtreleri)
-foxtrick.prefs.labelSavePrefs_Token=OAuth
-foxtrick.prefs.saveNotice=Metin alanı içindeki içeriği kopyala ve dosya olarak kaydet, ki böylece seçenekleri ileride içe aktarabilesiniz.
-foxtrick.prefs.labelLoadPrefs=Seçenekleri içe aktar (Mevcut seçeneklerin üstüne yazılacaktır)
-foxtrick.prefs.loadNotice=Metin alanındaki kaydedilmiş seçenekleri yapıştır ve seçenekleri içe aktarmak için "İçe aktar" butonuna bas.
-foxtrick.prefs.captionDisableSettings=FoxTrick devre dışı bırak
-foxtrick.prefs.stagepref=Stage sunucusunda devre dışı bırak
-foxtrick.prefs.disableTemporaryLabel=Geçici olarak devre dışı
-foxtrick.prefs.saved=Tercihler kaydedildi\!
-foxtrick.prefs.loaded=Tercihler yüklendi\!
-foxtrick.prefs.dismissNotice=(Bu haberi kapatmak için tıklayın)
+prefs.storedData.oauth.delete.desc=Sadece bu tarayıcı için geçerlidir. Foxtrick'in erişimini tamamıyla iptal etmek için, Hattrick'in {CHPP tercihleri} kısmını kullanın.
+prefs.storedData.disableAll=Tüm modüller devre dışı bırakma
+prefs.storedData.revokePermissions=Bütün opsiyonel izinleri iptal et (Chrome için)
+prefs.loadSave.export=Tercihler ve/veya kişisel seçenekleri dışa aktar
+prefs.loadSave.export.prefs=Tercihler
+prefs.loadSave.export.notes=Kişisel ayarlar (Şablonlar, özel linkler ve transfer filtreleri)
+prefs.loadSave.export.token=OAuth
+prefs.loadSave.export.notice=Metin alanı içindeki içeriği kopyala ve dosya olarak kaydet, ki böylece seçenekleri ileride içe aktarabilesiniz.
+prefs.loadSave.import=Seçenekleri içe aktar (Mevcut seçeneklerin üstüne yazılacaktır)
+prefs.loadSave.import.notice=Metin alanındaki kaydedilmiş seçenekleri yapıştır ve seçenekleri içe aktarmak için "İçe aktar" butonuna bas.
+prefs.disable.title=FoxTrick devre dışı bırak
+prefs.disable.stage=Stage sunucusunda devre dışı bırak
+prefs.disable.temporary=Geçici olarak devre dışı
+prefs.feedback.saved=Tercihler kaydedildi\!
+prefs.feedback.loaded=Tercihler yüklendi\!
+prefs.feedback.dismiss=(Bu haberi kapatmak için tıklayın)
 
-pref.xmlLoad=Hattrick'ten daha fazla bilgi için XML'leri yükle
+prefs.additional.xmlLoad=Hattrick'ten daha fazla bilgi için XML'leri yükle
 
 link.title=Linkler
 link.homepage=Ana sayfa
@@ -1171,8 +1171,8 @@ link.recentChanges=Güncel değişiklikler
 
 module.link=Buraya direk ulaşabilmek için foruma bu linki kopyalayıp yapıştırabilirsiniz
 
-foxtrick.showReleaseNotes=Her güncellemeden sonra sürüm notlarını göster
-foxtrick.versionReleaseNotes=Şu versiyon için sürüm notlarını göster\:
+releaseNotes.show=Her güncellemeden sonra sürüm notlarını göster
+releaseNotes.showFor=Şu versiyon için sürüm notlarını göster\:
 
 about.copyright=Telif hakkı
 about.maintainers=Derecelendiriciler
@@ -1183,15 +1183,15 @@ about.designers=Tasarımcılar
 prefs.view.by.category=Kategoriye göre göster
 prefs.view.by.page=Son ht sayfa görüntülemek
 
-delete_foxtrick_branches_ask=Varsayılan ayarları geri yüklemek istediğinizden emin misiniz?
-delete_oauth_ask=OAuth, TeamID %s için silinsin mi?
-disable_all_foxtrick_modules_ask=Tüm modülleri devre dışı bırakmak istediğinizden emin misiniz?
-revoke_permissions_ask=Tüm isteğe bağlı izinleri iptal etmek istediğinizden emin misiniz?
+prefs.delete_foxtrick_branches_ask=Varsayılan ayarları geri yüklemek istediğinizden emin misiniz?
+prefs.delete_oauth_ask=OAuth, TeamID %s için silinsin mi?
+prefs.disable_all_foxtrick_modules_ask=Tüm modülleri devre dışı bırakmak istediğinizden emin misiniz?
+prefs.revoke_permissions_ask=Tüm isteğe bağlı izinleri iptal etmek istediğinizden emin misiniz?
 
-foxtrick.prefs.AdditionalOptions=Genel Seçenekler
-foxtrick.prefs.smallcopyicons=Kopyalama simgelerini kenar çubuğu'nun yerine başlıkta göster
-foxtrick.prefs.DisplayHTMLDebugOutput=FoxTrick günlüğünü sayfaların alt tarafında göster(hata ayıklama için)
+prefs.additional.title=Genel Seçenekler
+prefs.additional.smallCopyIcons=Kopyalama simgelerini kenar çubuğu'nun yerine başlıkta göster
+prefs.additional.HTMLDebugLog=FoxTrick günlüğünü sayfaların alt tarafında göster(hata ayıklama için)
 
-foxtrick.prefs.permissionsHint=%S çalışması için izin gerekiyor. Aşağıdaki iletişim erişimine izin verin. Eğer reddederseniz bu modül özelliği devre dışı kalacaktır.
+prefs.permissionsHint=%S çalışması için izin gerekiyor. Aşağıdaki iletişim erişimine izin verin. Eğer reddederseniz bu modül özelliği devre dışı kalacaktır.
 
 ###EOF
