--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -946,9 +946,9 @@ exception.error=Fout %s
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-foxtrick=FoxTrick
+toolbar.title=FoxTrick
 preferences=Voorkeursinstellingen
-foxtrick.prefs.preferences=FoxTrick voorkeursinstellingen
+prefs.title=FoxTrick voorkeursinstellingen
 status.active=actief
 status.enabled=ingeschakeld, maar niet actief op %s
 status.disabled=uitgeschakeld
@@ -957,7 +957,7 @@ status.active=actief
 status.enabled=aangezet, maar niet actief op %s
 status.disabled=uitgezet
 
-prefs.screenshot=Screenshot
+module.screenshot=Screenshot
 
 # tabs in preferences page
 #tabs
@@ -976,31 +976,31 @@ tab.changes=Veranderingen
 tab.help=Help
 
 
-foxtrick.prefs.setup.locale=Taal
-foxtrick.prefs.setup.dateFormat=Datum
-foxtrick.prefs.setup.country=Land
+prefs.setup.locale=Taal
+prefs.setup.dateFormat=Datum
+prefs.setup.country=Land
 
-foxtrick.prefs.captionCleanupBranch=Opgeslagen voorkeuren
-foxtrick.prefs.captionLoadSavePrefs=Exporteer of importeer voorkeuren
-foxtrick.prefs.labelCleanupBranch=Zet standaard instellingen terug (alleen voorkeuren, geen persoonlijke instellingen, herstart vereist)
-foxtrick.prefs.oauth.delete=Verwijder OAuth token voor het geselecteerde team.
+prefs.storedData.title=Opgeslagen voorkeuren
+prefs.loadSave.title=Exporteer of importeer voorkeuren
+prefs.storedData.restoreDefault=Zet standaard instellingen terug (alleen voorkeuren, geen persoonlijke instellingen, herstart vereist)
+prefs.storedData.oauth.delete=Verwijder OAuth token voor het geselecteerde team.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Alleen toepasbaar op deze browser. Om complete toegang van FoxTrick aan een team's informatie af te sluiten, gebruik Hattrick's {CHPP management}.
-foxtrick.prefs.labelDisableAll=Zet alle modules uit
-foxtrick.prefs.labelSavePrefs=Exporteer voorkeuren en/of persoonlijke instellingen
-foxtrick.prefs.labelSavePrefs_Prefs=Voorkeuren
-foxtrick.prefs.labelSavePrefs_Notes=Persoonlijke instellingen (notities, sjablonen en aangepaste links)
-foxtrick.prefs.saveNotice=Kopieer de inhoud in het tekstvak en sla het op in een tekstbestand, op deze manier kun je je voorkeuren in de toekomst importeren.
-foxtrick.prefs.labelLoadPrefs=Importeer voorkeuren (huidige instellingen kunnen overschreven worden, herstart is vereist)
-foxtrick.prefs.loadNotice=Plak je opgeslagen voorkeuren in het tekstvak en klik op 'Importeer' om je opgeslagen voorkeuren te importeren.
-foxtrick.prefs.captionDisableSettings=Schakel FoxTrick uit
-foxtrick.prefs.stagepref=Schakel FoxTrick op de Stage server uit
-foxtrick.prefs.disableTemporaryLabel=Schakel FoxTrick tijdelijk uit
-foxtrick.prefs.saved=Voorkeuren opgeslagen!
-foxtrick.prefs.loaded=Voorkeuren ingeladen!
-foxtrick.prefs.dismissNotice=(klik om dit bericht te verbergen)
+prefs.storedData.oauth.delete.desc=Alleen toepasbaar op deze browser. Om complete toegang van FoxTrick aan een team's informatie af te sluiten, gebruik Hattrick's {CHPP management}.
+prefs.storedData.disableAll=Zet alle modules uit
+prefs.loadSave.export=Exporteer voorkeuren en/of persoonlijke instellingen
+prefs.loadSave.export.prefs=Voorkeuren
+prefs.loadSave.export.notes=Persoonlijke instellingen (notities, sjablonen en aangepaste links)
+prefs.loadSave.export.notice=Kopieer de inhoud in het tekstvak en sla het op in een tekstbestand, op deze manier kun je je voorkeuren in de toekomst importeren.
+prefs.loadSave.import=Importeer voorkeuren (huidige instellingen kunnen overschreven worden, herstart is vereist)
+prefs.loadSave.import.notice=Plak je opgeslagen voorkeuren in het tekstvak en klik op 'Importeer' om je opgeslagen voorkeuren te importeren.
+prefs.disable.title=Schakel FoxTrick uit
+prefs.disable.stage=Schakel FoxTrick op de Stage server uit
+prefs.disable.temporary=Schakel FoxTrick tijdelijk uit
+prefs.feedback.saved=Voorkeuren opgeslagen!
+prefs.feedback.loaded=Voorkeuren ingeladen!
+prefs.feedback.dismiss=(klik om dit bericht te verbergen)
 
-pref.xmlLoad=Laad XMLs voor extra informatie van Hattrick
+prefs.additional.xmlLoad=Laad XMLs voor extra informatie van Hattrick
 
 link.title=Links
 link.homepage=Thuispagina
@@ -1011,8 +1011,8 @@ link.nightlyFirefox=Ontwikkelingsversies voor Firefox
 link.nightlyChrome=Ontwikkelingsversies for Google Chrome
 link.recentChanges=Recente veranderingen
 
-foxtrick.showReleaseNotes=Laat veranderingen aan FoxTrick zien na een update
-foxtrick.versionReleaseNotes=Laat de notities van veranderingen zien voor:
+releaseNotes.show=Laat veranderingen aan FoxTrick zien na een update
+releaseNotes.showFor=Laat de notities van veranderingen zien voor:
 
 about.copyright=Copyright
 about.maintainers=Maintainers
@@ -1023,13 +1023,13 @@ about.designers=Designers
 prefs.view.by.category=Laat per categorie zien
 prefs.view.by.page=Laat voor de laatste HT pagina zien
 
-delete_foxtrick_branches_ask=Weet je zeker dat je de standaardinstellingen wilt terugzetten?\nFirefox moet hiervoor opnieuw opgestart worden!
-delete_oauth_ask=Verwijder OAuth token voor teamid %s?
-disable_all_foxtrick_modules_ask=Weet je zeker dat je alle modules wilt uitschakelen?\n
+prefs.delete_foxtrick_branches_ask=Weet je zeker dat je de standaardinstellingen wilt terugzetten?\nFirefox moet hiervoor opnieuw opgestart worden!
+prefs.delete_oauth_ask=Verwijder OAuth token voor teamid %s?
+prefs.disable_all_foxtrick_modules_ask=Weet je zeker dat je alle modules wilt uitschakelen?\n
 
-foxtrick.prefs.AdditionalOptions=Meer opties
-foxtrick.prefs.smallcopyicons=Kleine kopieericonen in de kop in plaats van in een aparte box aan de zijkant
-foxtrick.prefs.DisplayHTMLDebugOutput=Toon extra debug uitvoer op Hattrick pagina's (voor ontwikkelaars)
+prefs.additional.title=Meer opties
+prefs.additional.smallCopyIcons=Kleine kopieericonen in de kop in plaats van in een aparte box aan de zijkant
+prefs.additional.HTMLDebugLog=Toon extra debug uitvoer op Hattrick pagina's (voor ontwikkelaars)
 
 
 ###EOF
